website bulk update - end sprint

--- a/lawwa-web-revised/gallery.html
+++ b/lawwa-web-revised/gallery.html
@@ -41,36 +41,33 @@
     <header class="header-section">
       <div class="container-fluid">
         <div class="row">
-          <!-- <div class="row" style="background-image: url('img/lawwa-img/wavey2.png');"> -->
-          <!-- <div class="row" style="background-image: linear-gradient(60deg, rgba(217,55,104,1),  rgba(42,56,143,1));"> -->
-            <div class="col-4">
+            <div class="col-2">
               <div class="logo">
                 <a href="./index.html">
-                  <img src="img/lawwa-img/lawwa asia logo.png" alt="" width="60px" height="50px"/>
+                  <!-- <img src="img/lawwa-img/lawwa asia logo.png" alt="" width="60px" height="50px"/> -->
+                  <img src="img/lawwa-img/Logo/lawwa landscape.png" alt=""/>
                 </a>
               </div>
+            </div>
+            <div class="col-2">
+                <a href="./index.html">
+                  <img src="img/lawwa-img/register.jpg" alt="" width="30px" height="30px"/>                
+                </a>
             </div>
             <div class="col-8 col-lg-8">
             <nav class="nav-menu mobile-menu">
               <ul>
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./services.html">Services</a></li>
-                <li><a href="./membership.html">Membership Program</a></li>
-                <li><a href="./academy.html">PBT Academy</a></li>
-                <li class="active">
-                  <a href="./profile.html">Portfolio</a>
-                  <ul class="dropdown">
-                    <li><a href="./profile.html">Profile</a></li>
-                    <li><a href="./gallery.html">Gallery</a></li>
-                    <li><a href="./events.html">Events & News</a></li>
-                    <li><a href="./contact.html">Contact Us</a></li>
-                  </ul>
-                </li>
+                <li><a href="./membership.html">Membership</a></li>
+                <li><a href="./academy.html">Academy</a></li>
+                <li><a href="./recruitment.html">Recruitment</a></li>
+                <li class="active"><a href="./gallery.html">Gallery</a></li>
+                <li><a href="./events.html">News</a></li>
+                <li><a href="./profile.html">Profile</a></li>
+                <li><a href="./contact.html">Contact Us</a></li>
               </ul>
             </nav>
-            <div class="top-search search-switch">
-              <i class="fa fa-search"></i>
-            </div>
             <div id="mobile-menu-wrap"></div>
           </div>
         </div>
@@ -180,76 +177,69 @@
     </div>
     <!-- Gallery Section End -->
 
-     <!-- Footer Section Begin -->
-     <footer class="footer-section">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-3 col-md-6 col-sm-6">
-              <div class="fs-about">
-                <div class="fa-logo">
-                  <a href="#">
-                    <img src="img/lawwa-img/lawwa-footer-white-bg.png" alt="" />
-                  </a>
-                </div>
-                <p>
-                  Reach Out To Us On Any Of Our Social Media Platforms<br />We
-                  Would Love To Hear From You
-                </p>
-                <div class="fa-social">
-                  <a href="#"><i class="fa fa-facebook"></i></a>
-                  <a href="#"><i class="fa fa-twitter"></i></a>
-                  <a href="#"><i class="fa fa-youtube-play"></i></a>
-                  <a href="#"><i class="fa fa-instagram"></i></a>
-                </div>
-              </div>
+   <!-- Footer Section Begin -->
+   <footer class="footer-section">
+    <br><br>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-3 col-md-6 col-sm-6">
+          <div class="fs-about">
+            <div class="fa-logo">
+              <a href="#">
+                <img src="img/lawwa-img/lawwa_white.png" alt="" />
+                <!-- <img src="img/lawwa-img/lawwa-footer-white-bg.png" alt="" /> -->
+              </a>
             </div>
-            <div class="col-lg-3 col-md-6 col-sm-6">
-              <div class="fs-widget">
-                <h5>Goverment Agencies</h5>
-                <div class="fw-instagram">
-                  <img src="img/lawwa-img/govtLogo.png" alt="" />
-                  <img src="img/lawwa-img/govtLogo.png" alt="" />
-                  <img src="img/lawwa-img/govtLogo.png" alt="" />
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-6">
-              <div class="fs-widget">
-                <h5>Quick links</h5>
-                <ul>
-                  <li><a href="#">Home</a></li>
-                  <li><a href="#">About</a></li>
-                  <li><a href="#">Contact</a></li>
-                </ul>
-                <ul>
-                  <li><a href="#">Gallery</a></li>
-                  <li><a href="#">Portfolio</a></li>
-                  <li><a href="#">Services</a></li>
-                </ul>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-6">
-              <div class="fs-widget">
-                <h5>Related Links</h5>
-                <ul>
-                  <li>
-                    <span style="color: rgba(42,56,143,1);">Lawwa.Asia Booking System</span>
-                    <a href="https://booking.lawwa.online/lawwa/">https://booking.lawwa.online/lawwa/</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-            <div class="col-lg-12">
-              <div class="copyright-text">
-                <p>
-                  Copyright &copy; 2021 All rights reserved | Trokatech Resources
-                </p>
-              </div>
+            <p>
+              Reach Out To Us
+            </p>
+            <div class="fa-social">
+              <a href="#"><i class="fa fa-facebook"></i></a>
+              <a href="#"><i class="fa fa-twitter"></i></a>
+              <a href="#"><i class="fa fa-youtube-play"></i></a>
+              <a href="#"><i class="fa fa-instagram"></i></a>
             </div>
           </div>
         </div>
-      </footer>
-      <!-- Footer Section End -->  
+        <div class="col-lg-3 col-md-6 col-sm-6">
+          <div class="fs-widget">
+            <h5>Quick links</h5>
+            <ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+            <ul>
+              <li><a href="#">Gallery</a></li>
+              <li><a href="#">Portfolio</a></li>
+              <li><a href="#">Services</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6 col-sm-6">
+          <div class="fs-widget">
+            <h5>Related Links</h5>
+            <!-- <ul>
+              <li> -->
+                <a href="https://booking.lawwa.online/lawwa/"><p class="fs-widget">Lawwa.Asia Booking System </p></a>
+              <!-- </li>
+              <li> -->
+                <a href="#"><p class="fs-widget">Lawwa.Asia PBT Registration <br></p></a>
+              <!-- </li>
+            </ul> -->
+          </div>
+        </div>
+        <div class="col-lg-12">
+          <div class="copyright-text">
+            <p>
+              Copyright &copy; 2021 All rights reserved | Trokatech Resources
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer> 
+  <!-- Footer Section End -->
 
     <!-- Search model Begin -->
     <div class="search-model">
