--- a/lawwa-web-revised/recruitment.html
+++ b/lawwa-web-revised/recruitment.html
@@ -60,8 +60,8 @@
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./services.html">Services</a></li>
                 <li><a href="./membership.html">Membership</a></li>
-                <li class="active"><a href="./academy.html">Academy</a></li>
-                <li><a href="./recruitment.html">Recruitment</a></li>
+                <li><a href="./academy.html">Academy</a></li>
+                <li class="active"><a href="./recruitment.html">Recruitment</a></li>
                 <li><a href="./gallery.html">Gallery</a></li>
                 <li><a href="./events.html">News</a></li>
                 <li><a href="./profile.html">Profile</a></li>
@@ -90,33 +90,131 @@
     </div> -->
     <!-- Breadcrumb End -->
 
-    <br>
-    <section>
-      <div class="container-fluid">
-        <div class="col-lg-12 p-0">
-          <div class="col-lg-6 col-10 col-md-6 col-sm-10 cust-vid-player set-bg" data-setbg="img/lawwa-img/facial-alt.jpg">
-            <a href="http://www.youtube.com/watch?v=tm3XKSYa9Gs" class="play-btn video-popup">
-              <i class="fa fa-play"></i>
-            </a>
-          </div>
+    <!-- About Section Begin -->
+    <section class="about-section">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-6 p-0">
+                    <div class="about-pic set-bg" data-setbg="img/lawwa-img/makeup.jpg">
+                        <a href="http://www.youtube.com/watch?v=tm3XKSYa9Gs" class="play-btn video-popup"><i class="fa fa-play"></i></a>
+                    </div>
+                </div>
+                <div class="col-lg-6 p-0">
+                    <div class="about-text">
+                        <div class="section-title">
+                            <h2>Join Malaysia's Fast Growing Beauty Solution</h2>
+                            <p>Our Personal Beauty Therapists (PBT) Are Thoroughly Trained Specialist In What They Do. 
+                            </p>
+                            <p>
+                                Heres Just A Few Reasons Joining Our Academy Is Right For You!
+                            </p>
+                        </div>
+                        <div class="at-list">
+                            <div class="al-item">
+                                <div class="al-pic">
+                                    <img src="img/about/list-1.png" alt="">
+                                </div>
+                                <div class="al-text">
+                                    <h5>Packaged Training</h5>
+                                    <p>We Are Commited To Providing You With The Perfect Blend Of; Beauty Theory, Hands On Demonstrations 
+                                        And The Right Techinical Platforms To Do What You Love To Do</p>
+                                </div>
+                            </div>
+                            <div class="al-item">
+                                <div class="al-pic">
+                                    <img src="img/about/list-2.png" alt="">
+                                </div>
+                                <div class="al-text">
+                                    <h5>Team Approach</h5>
+                                    <p>You're Not Alone! Our Hundreds Of PBT Are Grouped Into Suitable Teams To Help One Another Get The Job Done. 
+                                        Combined With Our Efficient Coomunication Platforms, You'll Have All The Help You Need, Whenever You Need It.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="al-item">
+                                <div class="al-pic">
+                                    <img src="img/about/list-3.png" alt="">
+                                </div>
+                                <div class="al-text">
+                                    <h5>Flexible Schedule</h5>
+                                    <p> description </p>
+                                </div>
+                            </div>
+                            <div class="al-item">
+                                <div class="al-pic">
+                                    <img src="img/about/list-4.png" alt="">
+                                </div>
+                                <div class="al-text">
+                                    <h5>Weekly Payment Scheme</h5>
+                                    <p>
+                                        description
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
     </section>
-    <br>
+    <!-- About Section End -->
 
-    <!-- <br>
-    <section>
-      <div class="container-fluid">
-        <div class="col-lg-12 p-0 ">
-          <img class="cust-vid-player" src="img/lawwa-img/treatment.jpg">
-          <a href="http://www.youtube.com/watch?v=tm3XKSYa9Gs" class="play-btn video-popup"><i class="fa fa-play"></i></a>
+    <!-- Team Section Begin -->
+    <!-- <section class="team-section spad">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 col-md-6">
+                    <div class="section-title">
+                        <h2>Our team /  Trainers</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-3 col-md-6 col-sm-6">
+                    <div class="team-item">
+                        <img src="img/team/team-1.jpg" alt="">
+                        <div class="ti-text">
+                            <h5>name here</h5>
+                            <span>Principal</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-6">
+                    <div class="team-item">
+                        <img src="img/team/team-2.jpg" alt="">
+                        <div class="ti-text">
+                            <h5>name here</h5>
+                            <span>job designation</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-6">
+                    <div class="team-item">
+                        <img src="img/team/team-3.jpg" alt="">
+                        <div class="ti-text">
+                            <h5>name here</h5>
+                            <span>job designation</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-6">
+                    <div class="team-item">
+                        <img src="img/team/team-4.jpg" alt="">
+                        <div class="ti-text">
+                            <h5>name here</h5>
+                            <span>job designation</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-    </section>
-    <br> -->
+    </section> -->
+    <!-- Team Section End -->
 
     <!-- Cta Section Begin -->
-    <!-- <section class="cta-section spad set-bg" data-setbg="img/lawwa-img/DSC08056.jpg">
+    <section class="cta-section spad set-bg" data-setbg="img/lawwa-img/DSC08056.jpg">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -130,82 +228,11 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
     <!-- Cta Section End -->
 
     <br><br>
-
-    <section class="services-option" >
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12">
-              <div class="section-title pricing-title" style="margin-bottom: 10px !important; padding-bottom: 20px !important;">
-                  <h3>Lawwa Academy</h3>
-                  <span> description </span>
-              </div>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-lg-6">
-                  <div class="so-item">
-                      <div class="so-title">
-                          <div class="so-number" style="background: rgba(217,55,104,1);">01</div>
-                          <h5>Fine-Tuned Curriculum </h5>
-                      </div>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                          magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
-                  </div>
-                  <div class="so-item">
-                      <div class="so-title">
-                          <div class="so-number" style="background: rgba(42,56,143,1);">02</div>
-                          <h5>Expert Instructions</h5>
-                      </div>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                          magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
-                  </div>
-                  <div class="so-item">
-                      <div class="so-title">
-                          <div class="so-number">03</div>
-                          <h5>Practicial Training</h5>
-                      </div>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                          magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
-                  </div>
-              </div>
-              <div class="col-lg-6">
-                  <div class="so-item">
-                      <div class="so-title">
-                          <div class="so-number">04</div>
-                          <h5>Beauty Theory/Concepts</h5>
-                      </div>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                          magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
-                  </div>
-                  <div class="so-item">
-                      <div class="so-title">
-                          <div class="so-number">02</div>
-                          <h5>Malaysia wide service</h5>
-                      </div>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                          magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
-                  </div>
-                  <div class="so-item">
-                      <div class="so-title">
-                          <div class="so-number">03</div>
-                          <h5>Help Us Fight Covid</h5>
-                      </div>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                          magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
-                  </div>
-              </div>
-          </div>
-      </div>
-  </section>
-
-
-    <br><br>
-
+    
  <!-- Footer Section Begin -->
  <footer class="footer-section">
   <br><br><br>
