--- a/lawwa-web-revised/blog-details.html
+++ b/lawwa-web-revised/blog-details.html
@@ -1,69 +1,77 @@
 <!DOCTYPE html>
 <html lang="zxx">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="description" content="Lawwa Asia Official Website" />
+    <meta name="keywords" content="Lawwa, beauty" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Lawwa.Asia</title>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="description" content="Phozogy Template">
-    <meta name="keywords" content="Phozogy, unica, creative, html">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Phozogy | Template</title>
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="img/lawwa-img/favicon.ico" />
 
     <!-- Google Font -->
-    <link href="https://fonts.googleapis.com/css?family=Quantico:400,700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css?family=Quantico:400,700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- Css Styles -->
-    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
-    <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
-    <link rel="stylesheet" href="css/elegant-icons.css" type="text/css">
-    <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
-    <link rel="stylesheet" href="css/magnific-popup.css" type="text/css">
-    <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
-    <link rel="stylesheet" href="css/style.css" type="text/css">
-</head>
+    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
+    <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css" />
+    <link rel="stylesheet" href="css/elegant-icons.css" type="text/css" />
+    <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css" />
+    <link rel="stylesheet" href="css/magnific-popup.css" type="text/css" />
+    <link rel="stylesheet" href="css/slicknav.min.css" type="text/css" />
+    <link rel="stylesheet" href="css/style.css" type="text/css" />
+  </head>
 
-<body>
+  <body>
     <!-- Page Preloder -->
     <div id="preloder">
-        <div class="loader"></div>
+      <div class="loader"></div>
     </div>
 
     <!-- Header Section Begin -->
     <header class="header-section">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="logo">
-                        <a href="./index.html">
-                            <img src="img/logo.png" alt="">
-                        </a>
-                    </div>
-                    <nav class="nav-menu mobile-menu">
-                        <ul>
-                            <li><a href="./index.html">Home</a></li>
-                            <li><a href="./about.html">About</a></li>
-                            <li><a href="./services.html">Services</a></li>
-                            <li><a href="./pricing.html">Pricing</a></li>
-                            <li><a href="./portfolio.html">Portfolio</a></li>
-                            <li class="active"><a href="./blog.html">Blog</a></li>
-                            <li><a href="#">Pages</a>
-                                <ul class="dropdown">
-                                    <li><a href="./gallery.html">Gallery</a></li>
-                                    <li><a href="./portfolio-details.html">Portfolio Details</a></li>
-                                    <li><a href="./blog-details.html">Blog Details</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="./contact.html">Contact</a></li>
-                        </ul>
-                    </nav>
-                    <div class="top-search search-switch">
-                        <i class="fa fa-search"></i>
-                    </div>
-                    <div id="mobile-menu-wrap"></div>
-                </div>
+      <div class="container-fluid">
+        <div class="row">
+            <div class="col-2">
+              <div class="logo">
+                <a href="./index.html">
+                  <!-- <img src="img/lawwa-img/lawwa asia logo.png" alt="" width="60px" height="50px"/> -->
+                  <img src="img/lawwa-img/Logo/lawwa landscape.png" alt=""/>
+                </a>
+              </div>
             </div>
+            <div class="col-2">
+                <a href="./index.html">
+                  <img src="img/lawwa-img/register.jpg" alt="" width="30px" height="30px"/>                
+                </a>
+            </div>
+            <div class="col-8 col-lg-8">
+            <nav class="nav-menu mobile-menu">
+              <ul>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./services.html">Services</a></li>
+                <li><a href="./membership.html">Membership</a></li>
+                <li><a href="./academy.html">Academy</a></li>
+                <li><a href="./recruitment.html">Recruitment</a></li>
+                <li><a href="./gallery.html">Gallery</a></li>
+                <li class="active"><a href="./events.html">News</a></li>
+                <li><a href="./profile.html">Profile</a></li>
+                <li><a href="./contact.html">Contact Us</a></li>
+              </ul>
+            </nav>
+            <div id="mobile-menu-wrap"></div>
+          </div>
         </div>
+      </div>
     </header>
     <!-- Header End -->
 
@@ -75,16 +83,15 @@
                 <div class="col-lg-12">
                     <div class="blog-details-text">
                         <div class="bd-title">
-                            <div class="bt-bread">
+                            <!-- <div class="bt-bread">
                                 <a href="./index.html"><i class="fa fa-home"></i> Home</a>
                                 <a href="./index.html">Blog</a>
                                 <span>5 tips for improving low light smartphone photography</span>
-                            </div>
-                            <h2>5 tips for improving low light smartphone photography</h2>
+                            </div> -->
+                            <h2>Title</h2>
                             <ul>
                                 <li>by <span>Admin</span></li>
-                                <li>Aug,15, 2019</li>
-                                <li>20 Comment</li>
+                                <li>date</li>
                             </ul>
                         </div>
                         <div class="bd-top-text">
@@ -114,9 +121,9 @@
                                 the first CTA.</p>
                         </div>
                         <div class="bd-pics">
-                            <img src="img/blog/details/bd-1.jpg" alt="">
-                            <img src="img/blog/details/bd-2.jpg" alt="">
-                            <img src="img/blog/details/bd-3.jpg" alt="">
+                            <img src="img/lawwa-img/makeup-alt.jpg" alt="">
+                            <img src="img/lawwa-img/massage.jpg" alt="">
+                            <img src="img/lawwa-img/product2.jpg" alt="">
                         </div>
                         <div class="bd-last-desc">
                             <p>If they’re still in the awareness stages of getting to know the brand, then they’ll most
@@ -145,7 +152,7 @@
                                 <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
                             </div>
                         </div>
-                        <div class="bd-related-post">
+                        <!-- <div class="bd-related-post">
                             <div class="row">
                                 <div class="col-lg-6">
                                     <a href="#" class="post-item prev-item">
@@ -172,8 +179,8 @@
                                     </a>
                                 </div>
                             </div>
-                        </div>
-                        <div class="bd-author">
+                        </div> -->
+                        <!-- <div class="bd-author">
                             <div class="avatar-pic">
                                 <img src="img/blog/details/post-author.jpg" alt="">
                             </div>
@@ -190,8 +197,8 @@
                                     <a href="#"><i class="fa fa-youtube-play"></i></a>
                                 </div>
                             </div>
-                        </div>
-                        <div class="bd-comment-form">
+                        </div> -->
+                        <!-- <div class="bd-comment-form">
                             <div class="row">
                                 <div class="col-lg-6">
                                     <h4>Comment</h4>
@@ -254,7 +261,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -262,75 +269,62 @@
     </section>
     <!-- Blog Details Section End -->
 
-    <!-- Footer Section Begin -->
-    <footer class="footer-section">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="fs-about">
-                        <div class="fa-logo">
-                            <a href="#">
-                                <img src="img/f-logo.png" alt="">
-                            </a>
-                        </div>
-                        <p>Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                            et dolore magna aliqua.</p>
-                        <div class="fa-social">
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-youtube-play"></i></a>
-                            <a href="#"><i class="fa fa-instagram"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="fs-widget">
-                        <h5>Instagram</h5>
-                        <div class="fw-instagram">
-                            <img src="img/instagram/insta-1.jpg" alt="">
-                            <img src="img/instagram/insta-2.jpg" alt="">
-                            <img src="img/instagram/insta-3.jpg" alt="">
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="fs-widget">
-                        <h5>Quick links</h5>
-                        <ul>
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">About</a></li>
-                            <li><a href="#">Contact</a></li>
-                        </ul>
-                        <ul>
-                            <li><a href="#">Gallery</a></li>
-                            <li><a href="#">Portfolio</a></li>
-                            <li><a href="#">Services</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="fs-widget">
-                        <h5>Subscribe</h5>
-                        <p>Imolor amet consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-                        <div class="fw-subscribe">
-                            <form action="#">
-                                <input type="text" placeholder="Email">
-                                <button type="submit"><i class="fa fa-send"></i></button>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-12">
-                    <div class="copyright-text">
-                        <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-                    </div>
-                </div>
-            </div>
+ <!-- Footer Section Begin -->
+ <footer class="footer-section">
+  <br><br><br>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-3 col-md-6 col-sm-6">
+        <div class="fs-widget">
+          <h5>Related Links</h5>
+          <!-- <ul>
+            <li> -->
+              <a href="https://booking.lawwa.online/lawwa/"><p class="fs-widget">Lawwa.Asia Booking System </p></a>
+            <!-- </li>
+            <li> -->
+              <a href="#"><p class="fs-widget">Lawwa.Asia PBT Registration <br></p></a>
+            <!-- </li>
+          </ul> -->
         </div>
-    </footer>
-    <!-- Footer Section End -->
+      </div>
+      <div class="col-lg-3 col-md-6 col-sm-6">
+        <div class="fs-widget d-none d-md-block">
+          <h5>Quick links</h5>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+          <ul>
+            <li><a href="#">Gallery</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Services</a></li>
+          </ul>
+        </div>
+      </div>
+    <div class="row">
+      <div class="col-lg-12">
+        <!-- <div class="fa-social" style="border-top: 0; align: center">
+          <a href="#"><i class="fa fa-facebook"></i></a>
+          <a href="#"><i class="fa fa-twitter"></i></a>
+          <a href="#"><i class="fa fa-youtube-play"></i></a>
+          <a href="#"><i class="fa fa-instagram"></i></a>
+        </div> -->
+        <div class="fa-logo copyright-text" style="border-top: 0;">
+          <a href="#">
+            <img src="img/lawwa-img/lawwa_white.png" alt="" />
+          </a>
+        </div>
+        <div class="copyright-text">
+          <p>
+            Copyright &copy; 2021 All rights reserved | Trokatech Resources
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer> 
+<!-- Footer Section End -->
 
     <!-- Search model Begin -->
     <div class="search-model">
