--- a/lawwa-web-revised/contact.html
+++ b/lawwa-web-revised/contact.html
@@ -41,41 +41,33 @@
     <header class="header-section">
       <div class="container-fluid">
         <div class="row">
-          <!-- <div class="row" style="background-image: url('img/lawwa-img/wavey2.png');"> -->
-          <!-- <div class="row" style="background-image: linear-gradient(60deg, rgba(217,55,104,1),  rgba(42,56,143,1));"> -->
-            <div class="col-4">
+            <div class="col-2">
               <div class="logo">
                 <a href="./index.html">
-                  <img src="img/lawwa-img/lawwa asia logo.png" alt="" width="60px" height="50px"/>
+                  <!-- <img src="img/lawwa-img/lawwa asia logo.png" alt="" width="60px" height="50px"/> -->
+                  <img src="img/lawwa-img/Logo/lawwa landscape.png" alt=""/>
                 </a>
               </div>
             </div>
+            <div class="col-2">
+                <a href="./index.html">
+                  <img src="img/lawwa-img/register.jpg" alt="" width="30px" height="30px"/>                
+                </a>
+            </div>
             <div class="col-8 col-lg-8">
-            <!-- <div class="logo">
-              <a href="./index.html">
-                <img src="img/lawwa-img/lawwa asia logo.png" alt="" width="60px"height="50px"/>
-              </a>
-            </div> -->
             <nav class="nav-menu mobile-menu">
               <ul>
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./services.html">Services</a></li>
-                <li><a href="./membership.html">Membership Program</a></li>
-                <li><a href="./academy.html">PBT Academy</a></li>
-                <li class="active">
-                  <a href="#">Portfolio</a>
-                  <ul class="dropdown">
-                    <li><a href="./profile.html">Profile</a></li>
-                    <li><a href="./gallery.html">Gallery</a></li>
-                    <li><a href="./events.html">Events & News</a></li>
-                    <li><a href="./contact.html">Contact Us</a></li>
-                  </ul>
-                </li>
+                <li><a href="./membership.html">Membership</a></li>
+                <li><a href="./academy.html">Academy</a></li>
+                <li><a href="./recruitment.html">Recruitment</a></li>
+                <li><a href="./gallery.html">Gallery</a></li>
+                <li><a href="./events.html">News</a></li>
+                <li><a href="./profile.html">Profile</a></li>
+                <li class="active"><a href="./contact.html">Contact Us</a></li>
               </ul>
             </nav>
-            <div class="top-search search-switch">
-              <i class="fa fa-search"></i>
-            </div>
             <div id="mobile-menu-wrap"></div>
           </div>
         </div>
@@ -86,17 +78,36 @@
     <section class="contact-section spad">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 col-md-6">
-                    <div class="contact-text">
+                <div class="col-lg-4 col-md-4">
+                    <div class="contact-text" >
                         <h3>Get in touch</h3>
                         <br>
                         <div class="ct-item">
                             <div class="ct-icon">
-                                <i class="fa fa-map-marker"></i>
-                            </div>
+                              <i class="fa fa-map-marker"></i>
+                          </div>
                             <div class="ct-text">
                                 <h5>Address</h5>
-                                <p>address for seremban</p>
+                                <!-- <a href="https://www.google.com.my/maps/place/LAWWA.ASIA/@2.7179612,101.9230929,17z/data=!3m1!4b1!4m5!3m4!1s0x31cde7207e78f4b3:0xae4f6ff8fa1d6555!8m2!3d2.7179612!4d101.9252816" target="_blank">
+                                  <div class="" style="max-width: 40px; max-height: 40px;">
+                                    <img src="img/lawwa-img/map-icon.jpg" />
+                                  </div>
+                                </a>
+                                <a  target="_blank" href="https://www.waze.com/live-map/directions/malaysia/negeri-sembilan/seremban/lawwa.asia?utm_source=waze_website&utm_campaign=waze_website&utm_medium=website_menu&to=place.ChIJs_R4fiDnzTERVWUd-vhvT64">
+                                  <div class="" style="max-width: 40px; max-height: 40px;">
+                                    <img src="img/lawwa-img/waze-icon.jpg" />
+                                  </div>
+                                </a>  -->
+                                <a href="https://www.google.com.my/maps/place/LAWWA.ASIA/@2.7179612,101.9230929,17z/data=!3m1!4b1!4m5!3m4!1s0x31cde7207e78f4b3:0xae4f6ff8fa1d6555!8m2!3d2.7179612!4d101.9252816" target="_blank">
+                                  <p>
+                                  Lawwa.Asia Oasis Southern Region
+                                  No 2- 1, First Floor 
+                                  Jalan Oasis 1
+                                  Oasis Business Centre
+                                  70200 Seremban
+                                  N.Sembilan
+                                  </p>
+                                </a>
                             </div>
                         </div>
                         <div class="ct-item">
@@ -104,28 +115,28 @@
                                 <i class="fa fa-mobile"></i>
                             </div>
                             <div class="ct-text">
-                                <h5>Phone</h5>
+                                <h5>Phone</h5>  
                                 <ul>
-                                    <li>number 1</li>
-                                    <li>number 2</li>
+                                    <li>+60 12 700 0107</li>
+                                    <!-- <li>number 2</li> -->
                                 </ul>
                             </div>
                         </div>
+                        <br>
+
                         <div class="ct-item">
                             <div class="ct-icon">
                                 <i class="fa fa-envelope"></i>
                             </div>
                             <div class="ct-text">
                                 <h5>Email</h5>
-                                <p>Support @ gmail.com</p>
-                            </div>
+                                <a href="mailto:someone@example.com"><p>@lawwa.asia</p></a>
+                              </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 col-md-6">
-                    <div class="contact-form">
-                        <!-- <h3>Work with Me!</h3> -->
-                        <!-- <br><br><br><br><br> -->
+                <div class="col-lg-8 col-md-8">
+                    <!-- <div class="contact-form">
                         <form action="#">
                             <input type="text" placeholder="Name">
                             <input type="text" placeholder="Email">
@@ -133,89 +144,89 @@
                             <textarea placeholder="Message"></textarea>
                             <button type="submit" class="site-btn" style="background-image: linear-gradient(60deg, rgba(217,55,104,1),  rgba(42,56,143,1));">Submit</button>
                         </form>
-                    </div>
+                    </div> -->
+
+                    <section class="ad-banner">
+                      <div class="container">
+                          <div class="row">
+                              <div class="col-lg-12" >
+                                  <div class="ph-text set-bg" data-setbg="img/lawwa-img/festivebanner04.jpeg">
+                                      <h2>Join Today For Full Access To Our Services</h2>
+                                      <p>
+                                        <a href="https://booking.lawwa.online/lawwa/sign-up.php" target="_blank"
+                                        class="cust-lawwa-gradient">
+                                        JOIN NOW
+                                      </a>
+                                      </p>
+                                      
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                  </section>
+
                 </div>
+
             </div>
         </div>
     </section>
 
-    <div class="map">
-        <iframe src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=2.7259,101.9378+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"
-            height="635" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0">
-        </iframe>
-    </div>
-
-
-    <!-- Footer Section Begin -->
-    <footer class="footer-section">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-3 col-md-6 col-sm-6">
-              <div class="fs-about">
-                <div class="fa-logo">
-                  <a href="#">
-                    <img src="img/lawwa-img/lawwa-footer-white-bg.png" alt="" />
-                  </a>
-                </div>
-                <p>
-                  Reach Out To Us On Any Of Our Social Media Platforms<br />We
-                  Would Love To Hear From You
-                </p>
-                <div class="fa-social">
-                  <a href="#"><i class="fa fa-facebook"></i></a>
-                  <a href="#"><i class="fa fa-twitter"></i></a>
-                  <a href="#"><i class="fa fa-youtube-play"></i></a>
-                  <a href="#"><i class="fa fa-instagram"></i></a>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-6">
-              <div class="fs-widget">
-                <h5>Goverment Agencies</h5>
-                <div class="fw-instagram">
-                  <img src="img/lawwa-img/govtLogo.png" alt="" />
-                  <img src="img/lawwa-img/govtLogo.png" alt="" />
-                  <img src="img/lawwa-img/govtLogo.png" alt="" />
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-6">
-              <div class="fs-widget">
-                <h5>Quick links</h5>
-                <ul>
-                  <li><a href="#">Home</a></li>
-                  <li><a href="#">About</a></li>
-                  <li><a href="#">Contact</a></li>
-                </ul>
-                <ul>
-                  <li><a href="#">Gallery</a></li>
-                  <li><a href="#">Portfolio</a></li>
-                  <li><a href="#">Services</a></li>
-                </ul>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-6">
-              <div class="fs-widget">
-                <h5>Related Links</h5>
-                <ul>
-                  <li>
-                    <span style="color: rgba(42,56,143,1);">Lawwa.Asia Booking System</span>
-                    <a href="https://booking.lawwa.online/lawwa/">https://booking.lawwa.online/lawwa/</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-            <div class="col-lg-12">
-              <div class="copyright-text">
-                <p>
-                  Copyright &copy; 2021 All rights reserved | Trokatech Resources
-                </p>
-              </div>
-            </div>
-          </div>
+ <!-- Footer Section Begin -->
+ <footer class="footer-section">
+  <br><br><br>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-3 col-md-6 col-sm-6">
+        <div class="fs-widget">
+          <h5>Related Links</h5>
+          <!-- <ul>
+            <li> -->
+              <a href="https://booking.lawwa.online/lawwa/"><p class="fs-widget">Lawwa.Asia Booking System </p></a>
+            <!-- </li>
+            <li> -->
+              <a href="#"><p class="fs-widget">Lawwa.Asia PBT Registration <br></p></a>
+            <!-- </li>
+          </ul> -->
         </div>
-      </footer>
-      <!-- Footer Section End -->
+      </div>
+      <div class="col-lg-3 col-md-6 col-sm-6">
+        <div class="fs-widget d-none d-md-block">
+          <h5>Quick links</h5>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+          <ul>
+            <li><a href="#">Gallery</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Services</a></li>
+          </ul>
+        </div>
+      </div>
+    <div class="row">
+      <div class="col-lg-12">
+        <!-- <div class="fa-social" style="border-top: 0; align: center">
+          <a href="#"><i class="fa fa-facebook"></i></a>
+          <a href="#"><i class="fa fa-twitter"></i></a>
+          <a href="#"><i class="fa fa-youtube-play"></i></a>
+          <a href="#"><i class="fa fa-instagram"></i></a>
+        </div> -->
+        <div class="fa-logo copyright-text" style="border-top: 0;">
+          <a href="#">
+            <img src="img/lawwa-img/lawwa_white.png" alt="" />
+          </a>
+        </div>
+        <div class="copyright-text">
+          <p>
+            Copyright &copy; 2021 All rights reserved | Trokatech Resources
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer> 
+<!-- Footer Section End -->
 
     <!-- Search model Begin -->
     <div class="search-model">
