--- a/lawwa-web-revised/facial.html
+++ b/lawwa-web-revised/facial.html
@@ -41,34 +41,33 @@
     <header class="header-section">
       <div class="container-fluid">
         <div class="row">
-            <div class="col-4">
+            <div class="col-2">
               <div class="logo">
                 <a href="./index.html">
-                  <img src="img/lawwa-img/lawwa asia logo.png" alt="" width="60px" height="50px"/>
+                  <!-- <img src="img/lawwa-img/lawwa asia logo.png" alt="" width="60px" height="50px"/> -->
+                  <img src="img/lawwa-img/Logo/lawwa landscape.png" alt=""/>
                 </a>
               </div>
+            </div>
+            <div class="col-2">
+                <a href="./index.html">
+                  <img src="img/lawwa-img/register.jpg" alt="" width="30px" height="30px"/>                
+                </a>
             </div>
             <div class="col-8 col-lg-8">
             <nav class="nav-menu mobile-menu">
               <ul>
                 <li><a href="./index.html">Home</a></li>
                 <li class="active"><a href="./services.html">Services</a></li>
-                <li><a href="./membership.html">Membership Program</a></li>
-                <li><a href="./academy.html">PBT Academy</a></li>
-                <li>
-                  <a href="#">Portfolio</a>
-                  <ul class="dropdown">
-                    <li><a href="./profile.html">Profile</a></li>
-                    <li><a href="./gallery.html">Gallery</a></li>
-                    <li><a href="./events.html">Events & News</a></li>
-                    <li><a href="./contact.html">Contact Us</a></li>
-                  </ul>
-                </li>
+                <li><a href="./membership.html">Membership</a></li>
+                <li><a href="./academy.html">Academy</a></li>
+                <li><a href="./recruitment.html">Recruitment</a></li>
+                <li><a href="./gallery.html">Gallery</a></li>
+                <li><a href="./events.html">News</a></li>
+                <li><a href="./profile.html">Profile</a></li>
+                <li><a href="./contact.html">Contact Us</a></li>
               </ul>
             </nav>
-            <div class="top-search search-switch">
-              <i class="fa fa-search"></i>
-            </div>
             <div id="mobile-menu-wrap"></div>
           </div>
         </div>
@@ -76,14 +75,24 @@
     </header>
     <!-- Header End -->
 
+      <br>
+      <section>
+        <div class="container-fluid">
+          <div class="col-lg-12 p-0 ">
+            <img class="cust-banner-pic" src="img/lawwa-img/treatment.jpg">
+          </div>
+        </div>
+      </section>
+      <br>
+
     <!-- Services Section Begin -->
     <br>
     <section class="services-section services-normal spad">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <div class="section-title pricing-title">
-                        <h2>Facial Services</h2>
+                  <div class="section-title pricing-title" style="margin-bottom: 10px !important; padding-bottom: 20px !important;">
+                    <h3>Facial Services</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do<br /> eiusmod tempor
                             incididunt ut labore et dolore.</p>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do<br /> eiusmod tempor
@@ -129,7 +138,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <div class="section-title pricing-title">
+                    <div class="section-title pricing-title" style="margin-bottom: 10px !important; padding-bottom: 20px !important;">
                         <h2>Related Products</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do<br /> eiusmod tempor
                             incididunt ut labore et dolore.</p>
@@ -138,132 +147,134 @@
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <div class="so-item">
-                        <div class="so-title">
-                            <div class="so-number">01</div>
-                            <h5>Product</h5>
-                        </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+                  <div class="so-item">
+                    <div class="so-title">
+                      <div class="so-number">01</div>
+                      <h5>Product</h5>
+                      <br>
+                      <div class="row">
+                        <div class="col-5 col-sm-2 col-md-2" style="padding-left: 0;">
+                          <img src="img/lawwa-img/product1.jpg" alt="">
+                      </div>
+                      <div class="col-7 col-sm-10 col-md-10">
+                        <p>Lorem ipsum dolor sit   amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                          magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+                      </div>
+                      </div>
                     </div>
-                    <div class="so-item">
-                        <div class="so-title">
-                            <div class="so-number">02</div>
-                            <h5>Product</h5>
-                        </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+                  </div>
+
+                  <div class="so-item">
+                    <div class="so-title">
+                      <div class="so-number">02</div>
+                      <h5>Product</h5>
+                      <br>
+                      <div class="row">
+                        <div class="col-5 col-sm-4 col-md-2" style="padding-left: 0;">
+                          <img src="img/lawwa-img/product1.jpg" alt="">
+                      </div>
+                      <div class="col-7 col-sm-6 col-md-10">
+                        <p>Lorem ipsum dolor sit   amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                          magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+                      </div>
+                      </div>
                     </div>
-                    <div class="so-item">
+                  </div>
+                    <!-- <div class="so-item">
                         <div class="so-title">
                             <div class="so-number">03</div>
                             <h5>Product</h5>
                         </div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                             magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
-                    </div>
+                    </div> -->
                 </div>
-                <!-- <div class="col-lg-6">
-                    <div class="so-item">
-                        <div class="so-title">
-                            <div class="so-number">04</div>
-                            <h5>Social media photography</h5>
-                        </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
-                    </div>
-                    <div class="so-item">
-                        <div class="so-title">
-                            <div class="so-number">02</div>
-                            <h5>Event Photography</h5>
-                        </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
-                    </div>
-                    <div class="so-item">
-                        <div class="so-title">
-                            <div class="so-number">03</div>
-                            <h5>personal photography</h5>
-                        </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
-                    </div>
-                </div> -->
+
+
+
             </div>
         </div>
     </section>
     <!-- Services Option Section End -->
 
-    <!-- Footer Section Begin -->
-    <footer class="footer-section">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-3 col-md-6 col-sm-6">
-              <div class="fs-about">
-                <div class="fa-logo">
-                  <a href="#">
-                    <img src="img/lawwa-img/lawwa-footer-white-bg.png" alt="" />
-                  </a>
-                </div>
-                <p>
-                  Reach Out To Us On Any Of Our Social Media Platforms<br />We
-                  Would Love To Hear From You
-                </p>
-                <div class="fa-social">
-                  <a href="#"><i class="fa fa-facebook"></i></a>
-                  <a href="#"><i class="fa fa-twitter"></i></a>
-                  <a href="#"><i class="fa fa-youtube-play"></i></a>
-                  <a href="#"><i class="fa fa-instagram"></i></a>
-                </div>
+        <!-- Portfolio Hero Section Begin -->
+        <!-- class="ad-banner set-bg" data-setbg="img/lawwa-img/DSC08056.jpg" -->
+        <section class="ad-banner">
+          <div class="container">
+              <div class="row">
+                  <div class="col-lg-12" >
+                      <div class="ph-text set-bg" data-setbg="img/lawwa-img/DSC08056.jpg">
+                          <h2>Join Today For Full Access To Our Services</h2>
+                          <p>
+                            <a href="https://booking.lawwa.online/lawwa/sign-up.php" target="_blank"
+                            class="cust-lawwa-gradient">
+                            JOIN NOW
+                          </a>
+                          </p>
+                          
+                      </div>
+                  </div>
               </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-6">
-              <div class="fs-widget">
-                <h5>Goverment Agencies</h5>
-                <div class="fw-instagram">
-                  <img src="img/lawwa-img/govtLogo.png" alt="" />
-                  <img src="img/lawwa-img/govtLogo.png" alt="" />
-                  <img src="img/lawwa-img/govtLogo.png" alt="" />
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-6">
-              <div class="fs-widget">
-                <h5>Quick links</h5>
-                <ul>
-                  <li><a href="#">Home</a></li>
-                  <li><a href="#">About</a></li>
-                  <li><a href="#">Contact</a></li>
-                </ul>
-                <ul>
-                  <li><a href="#">Gallery</a></li>
-                  <li><a href="#">Portfolio</a></li>
-                  <li><a href="#">Services</a></li>
-                </ul>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-6">
-              <div class="fs-widget">
-                <h5>Related Links</h5>
-                <ul>
-                  <li>
-                    <span style="color: rgba(42,56,143,1);">Lawwa.Asia Booking System</span>
-                    <a href="https://booking.lawwa.online/lawwa/">https://booking.lawwa.online/lawwa/</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-            <div class="col-lg-12">
-              <div class="copyright-text">
-                <p>
-                  Copyright &copy; 2021 All rights reserved | Trokatech Resources
-                </p>
-              </div>
-            </div>
           </div>
+      </section>
+      <br><br>
+
+ <!-- Footer Section Begin -->
+ <footer class="footer-section">
+  <br><br><br>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-3 col-md-6 col-sm-6">
+        <div class="fs-widget">
+          <h5>Related Links</h5>
+          <!-- <ul>
+            <li> -->
+              <a href="https://booking.lawwa.online/lawwa/"><p class="fs-widget">Lawwa.Asia Booking System </p></a>
+            <!-- </li>
+            <li> -->
+              <a href="#"><p class="fs-widget">Lawwa.Asia PBT Registration <br></p></a>
+            <!-- </li>
+          </ul> -->
         </div>
-      </footer>
-      <!-- Footer Section End -->
+      </div>
+      <div class="col-lg-3 col-md-6 col-sm-6">
+        <div class="fs-widget d-none d-md-block">
+          <h5>Quick links</h5>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+          <ul>
+            <li><a href="#">Gallery</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Services</a></li>
+          </ul>
+        </div>
+      </div>
+    <div class="row">
+      <div class="col-lg-12">
+        <!-- <div class="fa-social" style="border-top: 0; align: center">
+          <a href="#"><i class="fa fa-facebook"></i></a>
+          <a href="#"><i class="fa fa-twitter"></i></a>
+          <a href="#"><i class="fa fa-youtube-play"></i></a>
+          <a href="#"><i class="fa fa-instagram"></i></a>
+        </div> -->
+        <div class="fa-logo copyright-text" style="border-top: 0;">
+          <a href="#">
+            <img src="img/lawwa-img/lawwa_white.png" alt="" />
+          </a>
+        </div>
+        <div class="copyright-text">
+          <p>
+            Copyright &copy; 2021 All rights reserved | Trokatech Resources
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer> 
+<!-- Footer Section End -->
 
     <!-- Search model Begin -->
     <div class="search-model">
