--- a/lawwa-web-revised/index.html
+++ b/lawwa-web-revised/index.html
@@ -41,20 +41,20 @@
     <header class="header-section">
       <div class="container-fluid">
         <div class="row">
-            <div class="col-2">
+            <div class="col-3">
               <div class="logo">
                 <a href="./index.html">
-                  <img src="img/lawwa-img/lawwa asia logo.png" alt="" width="60px" height="50px"/>
-                  <!-- <img src="img/logo.png" alt="" /> -->
+                  <!-- <img src="img/lawwa-img/lawwa asia logo.png" alt="" width="60px" height="50px"/> -->
+                  <img src="img/lawwa-img/Logo/LawwaLandscape.JPG" alt="" width="100%" height="50px"/>
                 </a>
               </div>
             </div>
-            <div class="col-2">
-              <div class="logo">
-                <a href="./index.html">
-                  <img src="img/lawwa-img/register.jpg" alt="" width="30px" height="30px"/>                
+            <div class="col-1">
+                <a href="https://booking.lawwa.online/lawwa/sign-up.php" target="_blank">
+                  <button class="cust-lawwa-ad-btn">
+                    <span>Register</span>
+                  </button>
                 </a>
-              </div>
             </div>
             <div class="col-8 col-lg-8">
             <nav class="nav-menu mobile-menu">
@@ -63,21 +63,22 @@
                 <li><a href="./services.html">Services</a></li>
                 <li><a href="./membership.html">Membership</a></li>
                 <li><a href="./academy.html">Academy</a></li>
-                <li><a href="./services.html">Recruitment</a></li>
+                <li><a lang="en" href="./recruitment.html">Recruitment</a><a lang="bm" href="./recruitment.html">rekruit</a></li>
+                <li><a href="./gallery.html">Gallery</a></li>
+                <li><a href="./events.html">News</a></li>
                 <li><a href="./profile.html">Profile</a></li>
-                <li><a href="./academy.html">Gallery</a></li>
+                <li><a href="./contact.html">Contact Us</a></li>
                 <li>
-                  <a href="./profile.html">Portfolio</a>
-                  <ul class="dropdown">
-                    <li><a href="./profile.html">Profile</a></li>
-                    <li><a href="./gallery.html">Gallery</a></li>
-                    <li><a href="./events.html">Events & News</a></li>
-                    <li><a href="./contact.html">Contact Us</a></li>
-                  </ul>
                 </li>
               </ul>
             </nav>
-            <div id="mobile-menu-wrap"></div>
+            <div id="mobile-menu-wrap">
+            </div>
+            <div style="float: right; border-style:dotted; border-radius: 5px; margin-top: 25px;">
+              <small>
+                <b id="switch-lang">Toggle Language</b>
+              </small>
+            </div>
           </div>
         </div>
       </div>
@@ -87,74 +88,56 @@
     <!-- Hero Section Begin -->
     <section class="hero-section">
       <div class="hs-slider owl-carousel">
-        <div class="hs-item set-bg" data-setbg="img/lawwa-img/festivebanner05.jpeg">
+        <!-- <div class="hs-item-one set-bg" data-setbg="img/lawwa-img/lawwa_new_banner.jpg"> -->
+          <div class="hs-item-one set-bg" >
+            <img src="img/lawwa-img/banner_alt1.jpeg" height="100%">
+            
           <div class="container">
             <div class="row">
               <div class="col-lg-12">
-                <div class="hs-text">
-                  <h2>Happy Holidays From Lawwa.Asia</h2>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                    do eiusmod tempor incididunt ut labore et<br />
-                    dolore magna aliqua. Quis ipsum suspendisse ultrices gravida
-                    accumsan lacus vel facilisis.
-                  </p>
-                </div>
               </div>
             </div>
             <div class="row" style="position: absolute; bottom: 0;">
               <div class="custom-social">
                 <a href="#">
-                  <!-- <i class="fa fa-facebook"></i> -->
                   <div class="" style="max-width: 40px; max-height: 40px;">
-                    <img src="img/lawwa-img/facebook-logo-bgless.png" />
+                    <img src="img/lawwa-img/Logo/facebook logo.png" />
                   </div>
                 </a>
-                <a href="#"><i class="fa fa-twitter"></i></a>
-                <a href="#"><i class="fa fa-youtube-play"></i></a>
-                <a href="#"><i class="fa fa-instagram"></i></a>
+                <a href="#">
+                  <div class="" style="max-width: 40px; max-height: 40px;">
+                    <img src="img/lawwa-img/Logo/instagram logo.png" />
+                  </div>
+                </a>
+                <a href="#">
+                  <div class="" style="max-width: 40px; max-height: 40px;">
+                    <img src="img/lawwa-img/Logo/twitter logo.png" />
+                  </div>
+                </a>
+                <a href="#">
+                  <div class="" style="max-width: 40px; max-height: 40px;">
+                    <img src="img/lawwa-img/Logo/mail logo.png" />
+                  </div>
+                </a>
               </div>
-              <!-- <div class="col-lg-4 col-md-6 col-sm-6">
-                <div class="" style="max-width: 100px; max-height: 100px;">
-                  <a href="https://www.instagram.com/" target="_blank">
-                    <img src="img/lawwa-img/igIcon.png" />
-                  </a> 
-                </div>
-              </div>
-              <div class="col-lg-4 col-md-6 col-sm-6">
-                <div class="" style="max-width: 100px; max-height: 100px;">
-                  <a href="https://www.facebook.com/" target="_blank">
-                    <img src="img/lawwa-img/fbIcon.png" />
-                    <img src="img/lawwa-img/facebook-logo.jpg" />
-                    <i class="fa fa-facebook-square" style="font-size:72px;color:blue"></i>
-                  </a>
-                </div>
-              </div>
-              <div class="col-lg-4 col-md-6 col-sm-6">
-                <div class="" style="max-width: 100px; max-height: 100px;">
-                  <a href="https://www.youtube.com/" target="_blank">
-                    <img src="img/lawwa-img/youtubeIcon.png" />
-                    <img src="img/lawwa-img/WA-icon.jpg" />
-                  </a>
-                </div>
-              </div> -->
             </div>
             <br>
           </div>
         </div>
-        <div class="hs-item set-bg" data-setbg="img/lawwa-img/DSC08056.jpg">
+        <!-- <div class="hs-item set-bg" data-setbg="img/lawwa-img/banner_alt2.jpeg"> -->
+          <div class="hs-item set-bg">
+            <img src="img/lawwa-img/banner_alt2.jpeg" height="100%">
           <div class="container">
             <div class="row">
               <div class="col-lg-12">
                 <div class="hs-text">
                   <h2></h2>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  <p lang="en">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                     do eiusmod tempor incididunt ut labore et<br />
                     dolore magna aliqua. Quis ipsum suspendisse ultrices gravida
-                    accumsan lacus vel facilisis.
-                  </p>
-                  <a
+                    accumsan lacus vel facilisis.</p>
+                  <p lang="bm">Bahasa malay alternative</p>
+                  <a lang="en"
                     href="https://booking.lawwa.online/lawwa/sign-up.php"
                     class="primary-btn"
                     style="
@@ -166,37 +149,44 @@
                     "
                     >Join Today!</a
                   >
+                  <a lang="bm"
+                  href="https://booking.lawwa.online/lawwa/sign-up.php"
+                  class="primary-btn"
+                  style="
+                    background-image: linear-gradient(
+                      60deg,
+                      rgba(217, 55, 104, 1),
+                      rgba(42, 56, 143, 1)
+                    );
+                  "
+                  >language alt</a
+                >
                 </div>
               </div>
             </div>
             <div class="row" style="position: absolute; bottom: 0;">
               <div class="custom-social">
-                <a href="#"><i class="fa fa-facebook"></i></a>
-                <a href="#"><i class="fa fa-twitter"></i></a>
-                <a href="#"><i class="fa fa-youtube-play"></i></a>
-                <a href="#"><i class="fa fa-instagram"></i></a>
+                <a href="#">
+                  <div class="" style="max-width: 40px; max-height: 40px;">
+                    <img src="img/lawwa-img/Logo/facebook logo.png" />
+                  </div>
+                </a>
+                <a href="#">
+                  <div class="" style="max-width: 40px; max-height: 40px;">
+                    <img src="img/lawwa-img/Logo/instagram logo.png" />
+                  </div>
+                </a>
+                <a href="#">
+                  <div class="" style="max-width: 40px; max-height: 40px;">
+                    <img src="img/lawwa-img/Logo/twitter logo.png" />
+                  </div>
+                </a>
+                <a href="#">
+                  <div class="" style="max-width: 40px; max-height: 40px;">
+                    <img src="img/lawwa-img/Logo/mail logo.png" />
+                  </div>
+                </a>
               </div>
-              <!-- <div class="col-lg-4 col-md-6 col-sm-6">
-                <div class="" style="max-width: 100px; max-height: 100px;">
-                  <a href="https://www.instagram.com/" target="_blank">
-                    <img src="img/lawwa-img/igIcon.png" />
-                  </a> 
-                </div>
-              </div>
-              <div class="col-lg-4 col-md-6 col-sm-6">
-                <div class="" style="max-width: 100px; max-height: 100px;">
-                  <a href="https://www.facebook.com/" target="_blank">
-                    <img src="img/lawwa-img/fbIcon.png" />
-                  </a>
-                </div>
-              </div>
-              <div class="col-lg-4 col-md-6 col-sm-6">
-                <div class="" style="max-width: 100px; max-height: 100px;">
-                  <a href="https://www.youtube.com/" target="_blank">
-                    <img src="img/lawwa-img/youtubeIcon.png" />
-                  </a>
-                </div>
-              </div> -->
             </div>
             <br />
               </div>
@@ -216,11 +206,17 @@
         <div class="row">
           <div class="col-lg-6 col-md-6">
             <div class="section-title">
-              <h2>Our Services</h2>
-              <p>
+              <h2 lang="en">Our Services</h2>
+              <h2 lang="bm">Services alt</h2>
+              <p lang="en">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                 do<br />
                 eiusmod tempor incididunt ut labore et dolore.
+              </p>
+              <p lang="bm">
+                alternative text
+                <br />
+                alternative text
               </p>
             </div>
           </div>
@@ -335,26 +331,26 @@
           <div class="col-lg-4 col-md-6 col-sm-6">
             <div class="services-item">
               <img src="img/lawwa-img/product2.jpg" alt="" />
-              <h3>Products</h3>
+              <h3 style="color: rgba(217,55,104,1);">Products</h3>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                 eiusmod tempor incididunt magna aliqua. Quis ipsum suspendisse
                 ultrices gravida.
               </p>
-              <a href="#" class="cust-lawwa-gradient">Browse Catalog</a>
+              <a href="./services.html" class="cust-lawwa-gradient">Browse Catalog</a>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-sm-6">
             <div class="services-item">
               <img src="img/lawwa-img/massage.jpg" alt="" />
-              <h3>Membership Kit</h3>
+              <h3 style="color: rgba(42,56,143,1);">Membership Kit</h3>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                 eiusmod tempor incididunt magna aliqua. Quis ipsum suspendisse
                 ultrices gravida.
               </p>
               <a
-                href="https://booking.lawwa.online/lawwa/sign-up.php"
+                href="https://booking.lawwa.online/lawwa/sign-up.php" target="_blank"
                 class="cust-lawwa-gradient"
                 >JOIN NOW</a
               >
@@ -367,29 +363,24 @@
 
     <!-- Footer Section Begin -->
     <footer class="footer-section">
-      <br><br>
+      <br><br><br>
       <div class="container">
         <div class="row">
           <div class="col-lg-3 col-md-6 col-sm-6">
-            <div class="fs-about">
-              <div class="fa-logo">
-                <a href="#">
-                  <img src="img/lawwa-img/lawwa-footer-white-bg.png" alt="" />
-                </a>
-              </div>
-              <p>
-                Reach Out To Us
-              </p>
-              <div class="fa-social">
-                <a href="#"><i class="fa fa-facebook"></i></a>
-                <a href="#"><i class="fa fa-twitter"></i></a>
-                <a href="#"><i class="fa fa-youtube-play"></i></a>
-                <a href="#"><i class="fa fa-instagram"></i></a>
-              </div>
+            <div class="fs-widget">
+              <h5>Related Links</h5>
+              <!-- <ul>
+                <li> -->
+                  <a href="https://booking.lawwa.online/lawwa/"><p class="fs-widget">Lawwa.Asia Booking System </p></a>
+                <!-- </li>
+                <li> -->
+                  <a href="#"><p class="fs-widget">Lawwa.Asia PBT Registration <br></p></a>
+                <!-- </li>
+              </ul> -->
             </div>
           </div>
           <div class="col-lg-3 col-md-6 col-sm-6">
-            <div class="fs-widget">
+            <div class="fs-widget d-none d-md-block">
               <h5>Quick links</h5>
               <ul>
                 <li><a href="#">Home</a></li>
@@ -403,18 +394,19 @@
               </ul>
             </div>
           </div>
-          <div class="col-lg-3 col-md-6 col-sm-6">
-            <div class="fs-widget">
-              <h5>Related Links</h5>
-              <ul>
-                <li>
-                  <p class="fs-widget">Lawwa.Asia Booking System <br> </p>
-                  <a href="https://booking.lawwa.online/lawwa/">https://booking.lawwa.online/lawwa/</a>
-                </li>
-              </ul>
-            </div>
-          </div>
+        <div class="row">
           <div class="col-lg-12">
+            <!-- <div class="fa-social" style="border-top: 0; align: center">
+              <a href="#"><i class="fa fa-facebook"></i></a>
+              <a href="#"><i class="fa fa-twitter"></i></a>
+              <a href="#"><i class="fa fa-youtube-play"></i></a>
+              <a href="#"><i class="fa fa-instagram"></i></a>
+            </div> -->
+            <div class="fa-logo copyright-text" style="border-top: 0;">
+              <a href="#">
+                <img src="img/lawwa-img/lawwa_white.png" alt="" />
+              </a>
+            </div>
             <div class="copyright-text">
               <p>
                 Copyright &copy; 2021 All rights reserved | Trokatech Resources
@@ -445,11 +437,10 @@
           <div class="modal-body">
             <button type="button" class="close" data-dismiss="modal">&times;</button>
 
-            <div class="  ">
-              <img src="img/lawwa-img/covid1.jpg">
+            <div class="">
+              <a href="https://booking.lawwa.online/lawwa/sign-up.php" target="_blank"><img src="img/lawwa-img/covid1.jpg"></a>
             </div>
             <br>
-            <p>Option For Text / links eg: Show upcoming event -> link to events page </p>     
           </div>
         </div>
         
