--- a/lawwa-web-revised/portfolio.html
+++ b/lawwa-web-revised/portfolio.html
@@ -194,74 +194,62 @@
     </section>
     <!-- Portfolio Section End -->
 
-    <!-- Footer Section Begin -->
-    <footer class="footer-section">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="fs-about">
-                        <div class="fa-logo">
-                            <a href="#">
-                                <img src="img/f-logo.png" alt="">
-                            </a>
-                        </div>
-                        <p>Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                        <div class="fa-social">
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-youtube-play"></i></a>
-                            <a href="#"><i class="fa fa-instagram"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="fs-widget">
-                        <h5>Instagram</h5>
-                        <div class="fw-instagram">
-                            <img src="img/instagram/insta-1.jpg" alt="">
-                            <img src="img/instagram/insta-2.jpg" alt="">
-                            <img src="img/instagram/insta-3.jpg" alt="">
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="fs-widget">
-                        <h5>Quick links</h5>
-                        <ul>
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">About</a></li>
-                            <li><a href="#">Contact</a></li>
-                        </ul>
-                        <ul>
-                            <li><a href="#">Gallery</a></li>
-                            <li><a href="#">Portfolio</a></li>
-                            <li><a href="#">Services</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="fs-widget">
-                        <h5>Subscribe</h5>
-                        <p>Imolor amet consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-                        <div class="fw-subscribe">
-                            <form action="#">
-                                <input type="text" placeholder="Email">
-                                <button type="submit"><i class="fa fa-send"></i></button>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-12">
-                    <div class="copyright-text">
-                        <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-                    </div>
-                </div>
-            </div>
+ <!-- Footer Section Begin -->
+ <footer class="footer-section">
+    <br><br><br>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-3 col-md-6 col-sm-6">
+          <div class="fs-widget">
+            <h5>Related Links</h5>
+            <!-- <ul>
+              <li> -->
+                <a href="https://booking.lawwa.online/lawwa/"><p class="fs-widget">Lawwa.Asia Booking System </p></a>
+              <!-- </li>
+              <li> -->
+                <a href="#"><p class="fs-widget">Lawwa.Asia PBT Registration <br></p></a>
+              <!-- </li>
+            </ul> -->
+          </div>
         </div>
-    </footer>
-    <!-- Footer Section End -->
+        <div class="col-lg-3 col-md-6 col-sm-6">
+          <div class="fs-widget d-none d-md-block">
+            <h5>Quick links</h5>
+            <ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+            <ul>
+              <li><a href="#">Gallery</a></li>
+              <li><a href="#">Portfolio</a></li>
+              <li><a href="#">Services</a></li>
+            </ul>
+          </div>
+        </div>
+      <div class="row">
+        <div class="col-lg-12">
+          <!-- <div class="fa-social" style="border-top: 0; align: center">
+            <a href="#"><i class="fa fa-facebook"></i></a>
+            <a href="#"><i class="fa fa-twitter"></i></a>
+            <a href="#"><i class="fa fa-youtube-play"></i></a>
+            <a href="#"><i class="fa fa-instagram"></i></a>
+          </div> -->
+          <div class="fa-logo copyright-text" style="border-top: 0;">
+            <a href="#">
+              <img src="img/lawwa-img/lawwa_white.png" alt="" />
+            </a>
+          </div>
+          <div class="copyright-text">
+            <p>
+              Copyright &copy; 2021 All rights reserved | Trokatech Resources
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer> 
+  <!-- Footer Section End -->
 
     <!-- Search model Begin -->
     <div class="search-model">
