--- a/lawwa-web-revised/productdemo.html
+++ b/lawwa-web-revised/productdemo.html
@@ -169,76 +169,62 @@
     </section>
     <!-- Recent Photography Section End -->
 
-     <!-- Footer Section Begin -->
-     <footer class="footer-section">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-3 col-md-6 col-sm-6">
-              <div class="fs-about">
-                <div class="fa-logo">
-                  <a href="#">
-                    <img src="img/lawwa-img/lawwa-footer-white-bg.png" alt="" />
-                  </a>
-                </div>
-                <p>
-                  Reach Out To Us On Any Of Our Social Media Platforms<br />We
-                  Would Love To Hear From You
-                </p>
-                <div class="fa-social">
-                  <a href="#"><i class="fa fa-facebook"></i></a>
-                  <a href="#"><i class="fa fa-twitter"></i></a>
-                  <a href="#"><i class="fa fa-youtube-play"></i></a>
-                  <a href="#"><i class="fa fa-instagram"></i></a>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-6">
-              <div class="fs-widget">
-                <h5>Goverment Agencies</h5>
-                <div class="fw-instagram">
-                  <img src="img/lawwa-img/govtLogo.png" alt="" />
-                  <img src="img/lawwa-img/govtLogo.png" alt="" />
-                  <img src="img/lawwa-img/govtLogo.png" alt="" />
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-6">
-              <div class="fs-widget">
-                <h5>Quick links</h5>
-                <ul>
-                  <li><a href="#">Home</a></li>
-                  <li><a href="#">About</a></li>
-                  <li><a href="#">Contact</a></li>
-                </ul>
-                <ul>
-                  <li><a href="#">Gallery</a></li>
-                  <li><a href="#">Portfolio</a></li>
-                  <li><a href="#">Services</a></li>
-                </ul>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-6">
-              <div class="fs-widget">
-                <h5>Related Links</h5>
-                <ul>
-                  <li>
-                    <span style="color: rgba(42,56,143,1);">Lawwa.Asia Booking System</span>
-                    <a href="https://booking.lawwa.online/lawwa/">https://booking.lawwa.online/lawwa/</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-            <div class="col-lg-12">
-              <div class="copyright-text">
-                <p>
-                  Copyright &copy; 2021 All rights reserved | Trokatech Resources
-                </p>
-              </div>
-            </div>
-          </div>
+ <!-- Footer Section Begin -->
+ <footer class="footer-section">
+  <br><br><br>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-3 col-md-6 col-sm-6">
+        <div class="fs-widget">
+          <h5>Related Links</h5>
+          <!-- <ul>
+            <li> -->
+              <a href="https://booking.lawwa.online/lawwa/"><p class="fs-widget">Lawwa.Asia Booking System </p></a>
+            <!-- </li>
+            <li> -->
+              <a href="#"><p class="fs-widget">Lawwa.Asia PBT Registration <br></p></a>
+            <!-- </li>
+          </ul> -->
         </div>
-      </footer>
-      <!-- Footer Section End -->
+      </div>
+      <div class="col-lg-3 col-md-6 col-sm-6">
+        <div class="fs-widget d-none d-md-block">
+          <h5>Quick links</h5>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+          <ul>
+            <li><a href="#">Gallery</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Services</a></li>
+          </ul>
+        </div>
+      </div>
+    <div class="row">
+      <div class="col-lg-12">
+        <!-- <div class="fa-social" style="border-top: 0; align: center">
+          <a href="#"><i class="fa fa-facebook"></i></a>
+          <a href="#"><i class="fa fa-twitter"></i></a>
+          <a href="#"><i class="fa fa-youtube-play"></i></a>
+          <a href="#"><i class="fa fa-instagram"></i></a>
+        </div> -->
+        <div class="fa-logo copyright-text" style="border-top: 0;">
+          <a href="#">
+            <img src="img/lawwa-img/lawwa_white.png" alt="" />
+          </a>
+        </div>
+        <div class="copyright-text">
+          <p>
+            Copyright &copy; 2021 All rights reserved | Trokatech Resources
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer> 
+<!-- Footer Section End -->
 
     <!-- Search model Begin -->
     <div class="search-model">
