--- a/lawwa-web-revised/profile.html
+++ b/lawwa-web-revised/profile.html
@@ -41,47 +41,39 @@
     <header class="header-section">
       <div class="container-fluid">
         <div class="row">
-          <!-- <div class="row" style="background-image: url('img/lawwa-img/wavey2.png');"> -->
-          <!-- <div class="row" style="background-image: linear-gradient(60deg, rgba(217,55,104,1),  rgba(42,56,143,1));"> -->
-            <div class="col-4">
+            <div class="col-2">
               <div class="logo">
                 <a href="./index.html">
-                  <img src="img/lawwa-img/lawwa asia logo.png" alt="" width="60px" height="50px"/>
+                  <!-- <img src="img/lawwa-img/lawwa asia logo.png" alt="" width="60px" height="50px"/> -->
+                  <img src="img/lawwa-img/Logo/lawwa landscape.png" alt=""/>
                 </a>
               </div>
             </div>
+            <div class="col-2">
+                <a href="./index.html">
+                  <img src="img/lawwa-img/register.jpg" alt="" width="30px" height="30px"/>                
+                </a>
+            </div>
             <div class="col-8 col-lg-8">
-            <!-- <div class="logo">
-              <a href="./index.html">
-                <img src="img/lawwa-img/lawwa asia logo.png" alt="" width="60px"height="50px"/>
-              </a>
-            </div> -->
             <nav class="nav-menu mobile-menu">
               <ul>
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./services.html">Services</a></li>
-                <li><a href="./membership.html">Membership Program</a></li>
-                <li><a href="./academy.html">PBT Academy</a></li>
-                <li class="active">
-                  <a href="#">Portfolio</a>
-                  <ul class="dropdown">
-                    <li><a href="./profile.html">Profile</a></li>
-                    <li><a href="./gallery.html">Gallery</a></li>
-                    <li><a href="./events.html">Events & News</a></li>
-                    <li><a href="./contact.html">Contact Us</a></li>
-                  </ul>
-                </li>
+                <li><a href="./membership.html">Membership</a></li>
+                <li><a href="./academy.html">Academy</a></li>
+                <li><a href="./recruitment.html">Recruitment</a></li>
+                <li><a href="./gallery.html">Gallery</a></li>
+                <li><a href="./events.html">News</a></li>
+                <li class="active"><a href="./profile.html">Profile</a></li>
+                <li><a href="./contact.html">Contact Us</a></li>
               </ul>
             </nav>
-            <div class="top-search search-switch">
-              <i class="fa fa-search"></i>
-            </div>
             <div id="mobile-menu-wrap"></div>
           </div>
         </div>
       </div>
     </header>
-    <!-- Header End -->
+    <!-- Header End -->  
 
     <!-- Portfolio Hero Section Begin -->
     <section class="portfolio-hero-section set-bg" data-setbg="img/lawwa-img/DSC08056.jpg">
@@ -132,101 +124,42 @@
         </div>
     </section>
 
-    <!-- Team Section Begin -->
-    <section class="team-section spad">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6 col-md-6">
-                    <div class="section-title">
-                        <h2>Organization Chart</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore.</p>
-                    </div>
-                </div>
-                <!-- <div class="col-lg-6 col-md-6">
-                    <div class="right-btn">
-                        <a href="#" class="primary-btn">Appointment</a>
-                    </div>
-                </div> -->
-            </div>
-            <div class="row">
-                <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="team-item">
-                        <img src="img/team/team-1.jpg" alt="">
-                        <div class="ti-text">
-                            <h5>name here</h5>
-                            <span>Principal</span>
-                            <!-- <div class="ti-social">
-                                <a href="#"><i class="fa fa-facebook"></i></a>
-                                <a href="#"><i class="fa fa-twitter"></i></a>
-                                <a href="#"><i class="fa fa-youtube-play"></i></a>
-                                <a href="#"><i class="fa fa-instagram"></i></a>
-                            </div> -->
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="team-item">
-                        <img src="img/team/team-2.jpg" alt="">
-                        <div class="ti-text">
-                            <h5>name here</h5>
-                            <span>job designation</span>
-                            <!-- <div class="ti-social">
-                                <a href="#"><i class="fa fa-facebook"></i></a>
-                                <a href="#"><i class="fa fa-twitter"></i></a>
-                                <a href="#"><i class="fa fa-youtube-play"></i></a>
-                                <a href="#"><i class="fa fa-instagram"></i></a>
-                            </div> -->
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="team-item">
-                        <img src="img/team/team-3.jpg" alt="">
-                        <div class="ti-text">
-                            <h5>name here</h5>
-                            <span>job designation</span>
-                            <!-- <div class="ti-social">
-                                <a href="#"><i class="fa fa-facebook"></i></a>
-                                <a href="#"><i class="fa fa-twitter"></i></a>
-                                <a href="#"><i class="fa fa-youtube-play"></i></a>
-                                <a href="#"><i class="fa fa-instagram"></i></a>
-                            </div> -->
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="team-item">
-                        <img src="img/team/team-4.jpg" alt="">
-                        <div class="ti-text">
-                            <h5>name here</h5>
-                            <span>job designation</span>
-                            <!-- <div class="ti-social">
-                                <a href="#"><i class="fa fa-facebook"></i></a>
-                                <a href="#"><i class="fa fa-twitter"></i></a>
-                                <a href="#"><i class="fa fa-youtube-play"></i></a>
-                                <a href="#"><i class="fa fa-instagram"></i></a>
-                            </div> -->
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Team Section End -->
 
+    <!-- <br>
+    <section>
+      <div class="container-fluid">
+        <div class="col-lg-12 p-0">
+          <div class="col-lg-6 col-6 col-md-6 col-sm-6 cust-vid-player set-bg" data-setbg="img/lawwa-img/facial-alt.jpg">
+            <a href="http://www.youtube.com/watch?v=tm3XKSYa9Gs" class="play-btn video-popup">
+              <i class="fa fa-play"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <br> -->
+
+
+    <br><br>
     <section class="about section">
         <div class="container">
             <div class="row">
-                <div class="col-md-5 col-sm-12">
+                <!-- <div class="col-md-5 col-sm-12">
                     <div class="block">
                         <img src="img/lawwa-img/DSC08050.jpg" alt="Img">
                     </div>
-                </div><!-- .col-md-5 close -->
+                </div> -->
+
+                <div class="col-lg-5 col-10 col-md-10 col-sm-10 cust-vid-player set-bg" data-setbg="img/lawwa-img/facial-alt.jpg">
+                  <a href="http://www.youtube.com/watch?v=tm3XKSYa9Gs" class="play-btn video-popup">
+                    <i class="fa fa-play"></i>
+                  </a>
+                </div>
+
                 <div class="col-md-7 col-sm-12">
                     <div class="block">
                         <div class="section-title">
-                            <h2>Word From Our CEO</h2>
+                            <h2>CEO Speech Video...</h2>
                         </div>
                         <p>CEO text </p>
                     </div>
@@ -235,154 +168,64 @@
         </div>
     </section>
 
-    <!-- Testimoial Section Begin -->
-    <section class="testimonial-section spad">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="section-title">
-                        <h2>Word From Our Board Of Directors</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br /> tempor
-                            incididunt ut labore et dolore.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="testimonial-item">
-                        <div class="ti-author">
-                            <div class="ta-pic">
-                                <img src="img/testimonial/ta-1.jpg" alt="">
-                            </div>
-                            <div class="ta-text">
-                                <h5>name</h5>
-                                <span>IG handle</span>
-                            </div>
-                        </div>
-                        <p>ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                            et dolore magna aliqua.</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="testimonial-item">
-                        <div class="ti-author">
-                            <div class="ta-pic">
-                                <img src="img/testimonial/ta-2.jpg" alt="">
-                            </div>
-                            <div class="ta-text">
-                                <h5> name</h5>
-                                <span>IG handle</span>
-                            </div>
-                        </div>
-                        <p>ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                            et dolore magna aliqua.</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="testimonial-item">
-                        <div class="ti-author">
-                            <div class="ta-pic">
-                                <img src="img/testimonial/ta-3.jpg" alt="">
-                            </div>
-                            <div class="ta-text">
-                                <h5> name</h5>
-                                <span>IG handle</span>
-                            </div>
-                        </div>
-                        <p>ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                            et dolore magna aliqua.</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="testimonial-item">
-                        <div class="ti-author">
-                            <div class="ta-pic">
-                                <img src="img/testimonial/ta-4.jpg" alt="">
-                            </div>
-                            <div class="ta-text">
-                                <h5> name</h5>
-                                <span>IG handle</span>
-                            </div>
-                        </div>
-                        <p>ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                            et dolore magna aliqua.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Testimonial Section End -->
+    <br><br>
 
-    <!-- Footer Section Begin -->
-    <footer class="footer-section">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-3 col-md-6 col-sm-6">
-              <div class="fs-about">
-                <div class="fa-logo">
-                  <a href="#">
-                    <img src="img/lawwa-img/lawwa-footer-white-bg.png" alt="" />
-                  </a>
-                </div>
-                <p>
-                  Reach Out To Us On Any Of Our Social Media Platforms<br />We
-                  Would Love To Hear From You
-                </p>
-                <div class="fa-social">
-                  <a href="#"><i class="fa fa-facebook"></i></a>
-                  <a href="#"><i class="fa fa-twitter"></i></a>
-                  <a href="#"><i class="fa fa-youtube-play"></i></a>
-                  <a href="#"><i class="fa fa-instagram"></i></a>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-6">
-              <div class="fs-widget">
-                <h5>Goverment Agencies</h5>
-                <div class="fw-instagram">
-                  <img src="img/lawwa-img/govtLogo.png" alt="" />
-                  <img src="img/lawwa-img/govtLogo.png" alt="" />
-                  <img src="img/lawwa-img/govtLogo.png" alt="" />
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-6">
-              <div class="fs-widget">
-                <h5>Quick links</h5>
-                <ul>
-                  <li><a href="#">Home</a></li>
-                  <li><a href="#">About</a></li>
-                  <li><a href="#">Contact</a></li>
-                </ul>
-                <ul>
-                  <li><a href="#">Gallery</a></li>
-                  <li><a href="#">Portfolio</a></li>
-                  <li><a href="#">Services</a></li>
-                </ul>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-6">
-              <div class="fs-widget">
-                <h5>Related Links</h5>
-                <ul>
-                  <li>
-                    <span style="color: rgba(42,56,143,1);">Lawwa.Asia Booking System</span>
-                    <a href="https://booking.lawwa.online/lawwa/">https://booking.lawwa.online/lawwa/</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-            <div class="col-lg-12">
-              <div class="copyright-text">
-                <p>
-                  Copyright &copy; 2021 All rights reserved | Trokatech Resources
-                </p>
-              </div>
-            </div>
-          </div>
+ <!-- Footer Section Begin -->
+ <footer class="footer-section">
+  <br><br><br>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-3 col-md-6 col-sm-6">
+        <div class="fs-widget">
+          <h5>Related Links</h5>
+          <!-- <ul>
+            <li> -->
+              <a href="https://booking.lawwa.online/lawwa/"><p class="fs-widget">Lawwa.Asia Booking System </p></a>
+            <!-- </li>
+            <li> -->
+              <a href="#"><p class="fs-widget">Lawwa.Asia PBT Registration <br></p></a>
+            <!-- </li>
+          </ul> -->
         </div>
-      </footer>
-      <!-- Footer Section End -->
+      </div>
+      <div class="col-lg-3 col-md-6 col-sm-6">
+        <div class="fs-widget d-none d-md-block">
+          <h5>Quick links</h5>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+          <ul>
+            <li><a href="#">Gallery</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Services</a></li>
+          </ul>
+        </div>
+      </div>
+    <div class="row">
+      <div class="col-lg-12">
+        <!-- <div class="fa-social" style="border-top: 0; align: center">
+          <a href="#"><i class="fa fa-facebook"></i></a>
+          <a href="#"><i class="fa fa-twitter"></i></a>
+          <a href="#"><i class="fa fa-youtube-play"></i></a>
+          <a href="#"><i class="fa fa-instagram"></i></a>
+        </div> -->
+        <div class="fa-logo copyright-text" style="border-top: 0;">
+          <a href="#">
+            <img src="img/lawwa-img/lawwa_white.png" alt="" />
+          </a>
+        </div>
+        <div class="copyright-text">
+          <p>
+            Copyright &copy; 2021 All rights reserved | Trokatech Resources
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer> 
+<!-- Footer Section End -->
 
     <!-- Search model Begin -->
     <div class="search-model">
