--- a/lawwa-web-revised/services.html
+++ b/lawwa-web-revised/services.html
@@ -41,40 +41,49 @@
     <header class="header-section">
       <div class="container-fluid">
         <div class="row">
-            <div class="col-4">
+            <div class="col-2">
               <div class="logo">
                 <a href="./index.html">
-                  <img src="img/lawwa-img/lawwa asia logo.png" alt="" width="60px" height="50px"/>
+                  <!-- <img src="img/lawwa-img/lawwa asia logo.png" alt="" width="60px" height="50px"/> -->
+                  <img src="img/lawwa-img/Logo/lawwa landscape.png" alt=""/>
                 </a>
               </div>
+            </div>
+            <div class="col-2">
+                <a href="./index.html">
+                  <img src="img/lawwa-img/register.jpg" alt="" width="30px" height="30px"/>                
+                </a>
             </div>
             <div class="col-8 col-lg-8">
             <nav class="nav-menu mobile-menu">
               <ul>
                 <li><a href="./index.html">Home</a></li>
                 <li class="active"><a href="./services.html">Services</a></li>
-                <li><a href="./membership.html">Membership Program</a></li>
-                <li><a href="./academy.html">PBT Academy</a></li>
-                <li>
-                  <a href="#">Portfolio</a>
-                  <ul class="dropdown">
-                    <li><a href="./profile.html">Profile</a></li>
-                    <li><a href="./gallery.html">Gallery</a></li>
-                    <li><a href="./events.html">Events & News</a></li>
-                    <li><a href="./contact.html">Contact Us</a></li>
-                  </ul>
-                </li>
+                <li><a href="./membership.html">Membership</a></li>
+                <li><a href="./academy.html">Academy</a></li>
+                <li><a href="./recruitment.html">Recruitment</a></li>
+                <li><a href="./gallery.html">Gallery</a></li>
+                <li><a href="./events.html">News</a></li>
+                <li><a href="./profile.html">Profile</a></li>
+                <li><a href="./contact.html">Contact Us</a></li>
               </ul>
             </nav>
-            <div class="top-search search-switch">
-              <i class="fa fa-search"></i>
-            </div>
             <div id="mobile-menu-wrap"></div>
           </div>
         </div>
       </div>
     </header>
     <!-- Header End -->
+
+      <br>
+      <section>
+        <div class="container">
+          <div class="col-lg-12 p-0">
+            <img class="cust-banner-pic" src="img/lawwa-img/DSC08056-v2.jpg">
+          </div>
+        </div>
+      </section>
+      <br>
 
     <!-- Blog Section Begin -->
     <br>
@@ -90,21 +99,19 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-10">
+                <div class="col-lg-9">
                     <div class="blog-item">
-                        <div class="bi-pic col-6">
+                        <div class="bi-pic col-10 col-sm-6 col-md-6">
                             <img src="img/lawwa-img/facial-alt.jpg" alt="">
                         </div>
                         <div class="bi-text">
                             <h5><a href="./facial.html">Facial</a>
                             </h5>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                                ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo
-                                viverra maecenas accumsan lacus vel facilisis. </p>
+                            <p>Lorem ipsum dolor sit amet, consectetur </p>
                         </div>
                     </div>
                     <div class="blog-item">
-                      <div class="bi-pic col-6">
+                      <div class="bi-pic col-10 col-sm-6 col-md-6">
                         <img src="img/lawwa-img/makeup-alt.jpg" alt="">
                       </div>
                       <div class="bi-text">
@@ -116,7 +123,7 @@
                       </div>
                   </div>
                   <div class="blog-item">
-                    <div class="bi-pic col-6">
+                    <div class="bi-pic col-10 col-sm-6 col-md-6">
                       <img src="img/lawwa-img/massage-alt.jpg" alt="">
                     </div>
                     <div class="bi-text">
@@ -128,7 +135,7 @@
                     </div>
                 </div>
                 <div class="blog-item">
-                  <div class="bi-pic col-6">
+                  <div class="bi-pic col-10 col-sm-6 col-md-6">
                     <img src="img/lawwa-img/confinement-alt.jpg" alt="">
                   </div>
                   <div class="bi-text">
@@ -140,7 +147,7 @@
                   </div>
               </div>
               <div class="blog-item">
-                <div class="bi-pic col-6">
+                <div class="bi-pic col-10 col-sm-6 col-md-6">
                   <img src="img/lawwa-img/treatment-alt.jpg" alt="">
                 </div>
                 <div class="bi-text">
@@ -152,7 +159,7 @@
                 </div>
             </div>
             <div class="blog-item">
-              <div class="bi-pic col-6">
+              <div class="bi-pic col-10 col-sm-6 col-md-6">
                 <img src="img/lawwa-img/add-on.jpeg" alt="">
               </div>
               <div class="bi-text">
@@ -164,82 +171,143 @@
               </div>
           </div>
                 </div>
-
+                <div class="col-lg-3">
+                    <div class="blog-sidebar">
+                        <div class="bs-item s-mb">
+                            <h5>Products</h5>
+                            <div class="bi-feature-post">
+                                <a href="productdemo.html" class="fp-item">
+                                  <div class="fp-pic col-6">
+                                    <img src="img/lawwa-img/product1.jpg" alt="">
+                                    </div>
+                                    <div class="fp-text">
+                                        <h6>name...</h6>
+                                        <!-- <span>Aug,15, 2019</span> -->
+                                    </div>
+                                </a>
+                                <a href="#" class="fp-item">
+                                  <div class="fp-pic col-6">
+                                    <img src="img/lawwa-img/product2.jpg" alt="">
+                                    </div>
+                                    <div class="fp-text">
+                                        <h6>name...</h6>
+                                    </div>
+                                </a>
+                                <a href="#" class="fp-item">
+                                  <div class="fp-pic col-6">
+                                    <img src="img/lawwa-img/product1.jpg" alt="">
+                                    </div>
+                                    <div class="fp-text">
+                                        <h6>name...</h6>
+                                    </div>
+                                </a>
+                                <a href="#" class="fp-item">
+                                  <div class="fp-pic col-6">
+                                    <img src="img/lawwa-img/product2.jpg" alt="">
+                                    </div>
+                                    <div class="fp-text">
+                                        <h6>name...</h6>
+                                        <!-- <span>Aug,15, 2019</span> -->
+                                    </div>
+                                </a>
+                                <a href="#" class="fp-item">
+                                  <div class="fp-pic col-6">
+                                    <img src="img/lawwa-img/product1.jpg" alt="">
+                                    </div>
+                                    <div class="fp-text">
+                                        <h6>name...</h6>
+                                        <!-- <span>Aug,15, 2019</span> -->
+                                    </div>
+                                </a>
+                                <a href="#" class="fp-item">
+                                  <div class="fp-pic col-6">
+                                    <img src="img/lawwa-img/product2.jpg" alt="">
+                                    </div>
+                                    <div class="fp-text">
+                                        <h6>description...</h6>
+                                    </div>
+                                </a>
+                                <a href="#" class="fp-item">
+                                    <div class="fp-pic col-6">
+                                      <img src="img/lawwa-img/product1.jpg" alt="">
+                                    </div>
+                                    <div class="fp-text">
+                                        <h6>description...</h6>
+                                    </div>
+                                </a>
+                                <a href="#" class="fp-item">
+                                  <div class="fp-pic col-6">
+                                    <img src="img/lawwa-img/product2.jpg" alt="">
+                                    </div>
+                                    <div class="fp-text">
+                                        <h6>description...</h6>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
     <!-- Blog Section End -->
 
-     <!-- Footer Section Begin -->
-     <footer class="footer-section">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-3 col-md-6 col-sm-6">
-              <div class="fs-about">
-                <div class="fa-logo">
-                  <a href="#">
-                    <img src="img/lawwa-img/lawwa-footer-white-bg.png" alt="" />
-                  </a>
-                </div>
-                <p>
-                  Reach Out To Us On Any Of Our Social Media Platforms<br />We
-                  Would Love To Hear From You
-                </p>
-                <div class="fa-social">
-                  <a href="#"><i class="fa fa-facebook"></i></a>
-                  <a href="#"><i class="fa fa-twitter"></i></a>
-                  <a href="#"><i class="fa fa-youtube-play"></i></a>
-                  <a href="#"><i class="fa fa-instagram"></i></a>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-6">
-              <div class="fs-widget">
-                <h5>Goverment Agencies</h5>
-                <div class="fw-instagram">
-                  <img src="img/lawwa-img/govtLogo.png" alt="" />
-                  <img src="img/lawwa-img/govtLogo.png" alt="" />
-                  <img src="img/lawwa-img/govtLogo.png" alt="" />
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-6">
-              <div class="fs-widget">
-                <h5>Quick links</h5>
-                <ul>
-                  <li><a href="#">Home</a></li>
-                  <li><a href="#">About</a></li>
-                  <li><a href="#">Contact</a></li>
-                </ul>
-                <ul>
-                  <li><a href="#">Gallery</a></li>
-                  <li><a href="#">Portfolio</a></li>
-                  <li><a href="#">Services</a></li>
-                </ul>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-6">
-              <div class="fs-widget">
-                <h5>Related Links</h5>
-                <ul>
-                  <li>
-                    <span style="color: rgba(42,56,143,1);">Lawwa.Asia Booking System</span>
-                    <a href="https://booking.lawwa.online/lawwa/">https://booking.lawwa.online/lawwa/</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-            <div class="col-lg-12">
-              <div class="copyright-text">
-                <p>
-                  Copyright &copy; 2021 All rights reserved | Trokatech Resources
-                </p>
-              </div>
-            </div>
-          </div>
+ <!-- Footer Section Begin -->
+ <footer class="footer-section">
+  <br><br><br>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-3 col-md-6 col-sm-6">
+        <div class="fs-widget">
+          <h5>Related Links</h5>
+          <!-- <ul>
+            <li> -->
+              <a href="https://booking.lawwa.online/lawwa/"><p class="fs-widget">Lawwa.Asia Booking System </p></a>
+            <!-- </li>
+            <li> -->
+              <a href="#"><p class="fs-widget">Lawwa.Asia PBT Registration <br></p></a>
+            <!-- </li>
+          </ul> -->
         </div>
-      </footer>
-      <!-- Footer Section End -->
+      </div>
+      <div class="col-lg-3 col-md-6 col-sm-6">
+        <div class="fs-widget d-none d-md-block">
+          <h5>Quick links</h5>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+          <ul>
+            <li><a href="#">Gallery</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Services</a></li>
+          </ul>
+        </div>
+      </div>
+    <div class="row">
+      <div class="col-lg-12">
+        <!-- <div class="fa-social" style="border-top: 0; align: center">
+          <a href="#"><i class="fa fa-facebook"></i></a>
+          <a href="#"><i class="fa fa-twitter"></i></a>
+          <a href="#"><i class="fa fa-youtube-play"></i></a>
+          <a href="#"><i class="fa fa-instagram"></i></a>
+        </div> -->
+        <div class="fa-logo copyright-text" style="border-top: 0;">
+          <a href="#">
+            <img src="img/lawwa-img/lawwa_white.png" alt="" />
+          </a>
+        </div>
+        <div class="copyright-text">
+          <p>
+            Copyright &copy; 2021 All rights reserved | Trokatech Resources
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer> 
+<!-- Footer Section End -->
 
     <!-- Search model Begin -->
     <div class="search-model">
