--- a/lawwa-web-revised/index.html
+++ b/lawwa-web-revised/index.html
@@ -457,6 +457,7 @@
     <script src="js/masonry.pkgd.min.js"></script>
     <script src="js/jquery.slicknav.js"></script>
     <script src="js/owl.carousel.min.js"></script>
+    <script src="js/lawwa.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
