--- a/lawwa-web-revised/profile.html
+++ b/lawwa-web-revised/profile.html
@@ -41,39 +41,69 @@
     <header class="header-section">
       <div class="container-fluid">
         <div class="row">
-            <div class="col-2">
+            <div class="col-5 col-lg-4 col-sm-4 col-xl-3 col-md-4">
               <div class="logo">
                 <a href="./index.html">
                   <!-- <img src="img/lawwa-img/lawwa asia logo.png" alt="" width="60px" height="50px"/> -->
-                  <img src="img/lawwa-img/Logo/lawwa landscape.png" alt=""/>
+                  <img src="img/lawwa-img/Logo/LawwaLandscape.JPG" alt="" width="100%" height="50px"/>
                 </a>
               </div>
             </div>
-            <div class="col-2">
-                <a href="./index.html">
-                  <img src="img/lawwa-img/register.jpg" alt="" width="30px" height="30px"/>                
+            <!-- <div class="col-2">
+                <a href="https://booking.lawwa.online/lawwa/sign-up.php" target="_blank">
+                  <button class="cust-lawwa-ad-btn">
+                    <span>Register</span>
+                  </button>
                 </a>
-            </div>
-            <div class="col-8 col-lg-8">
+            </div> -->
+            <div class="col-7 col-lg-8 col-md-7 col-xl-7 col-sm-8">
             <nav class="nav-menu mobile-menu">
               <ul>
                 <li><a href="./index.html">Home</a></li>
-                <li><a href="./services.html">Services</a></li>
+                <li><a href="./services.html">Products & Services</a></li>
                 <li><a href="./membership.html">Membership</a></li>
-                <li><a href="./academy.html">Academy</a></li>
-                <li><a href="./recruitment.html">Recruitment</a></li>
-                <li><a href="./gallery.html">Gallery</a></li>
-                <li><a href="./events.html">News</a></li>
-                <li class="active"><a href="./profile.html">Profile</a></li>
-                <li><a href="./contact.html">Contact Us</a></li>
+                <li><a lang="en" href="./academy.html">Academy</a><a lang="bm" href="./academy.html">Akademy</a>
+                    <ul class="dropdown">
+                        <li><a lang="en" href="./academy.html">Academy</a><a lang="bm" href="./academy.html">Akademy</a></li>
+                        <li><a lang="en" href="./recruitment.html">Recruitment</a><a lang="bm" href="./recruitment.html">rekruit</a></li>
+                        <li><a href="./courses.html">Courses</a></li>
+                    </ul>
+                </li>
+                <li class="active"><a href="./profile.html">Profile</a>
+                    <ul class="dropdown">
+                        <li><a href="./profile.html">Profile</a></li>
+                        <li><a href="./contact.html">Contact Us</a></li>
+                    </ul>
+                </li>
+                <li><a href="./gallery.html">Media</a>
+                    <ul class="dropdown">
+                        <li><a href="./gallery.html">Gallery</a></li>
+                        <li><a href="./events.html">Newsletter</a></li>
+                        <li><a href="./blog-details.html">Tips</a></li>
+                    </ul>
+                </li>
+                <!-- <li></li> -->
               </ul>
             </nav>
-            <div id="mobile-menu-wrap"></div>
+            <div id="mobile-menu-wrap">
+            </div>
+            <div style="float: right; margin-top: 25px; max-height: 25px; max-width: 25px;">
+              <small>
+                <img id="switch-lang" src="img/lawwa-img/lang-icon.jpg">
+              </small>
+            </div>
           </div>
+          <div class="register-div col-xl-2 col-lg-2 col-md-2 d-none d-xs-none d-sm-none d-md-none d-lg-inline ">
+            <a href="https://booking.lawwa.online/lawwa/sign-up.php" target="_blank">
+              <button class="cust-lawwa-ad-btn btn-block">
+                <span>Register</span>
+              </button>
+            </a>
+        </div>
         </div>
       </div>
     </header>
-    <!-- Header End -->  
+    <!-- Header End -->
 
     <!-- Portfolio Hero Section Begin -->
     <section class="portfolio-hero-section set-bg" data-setbg="img/lawwa-img/DSC08056.jpg">
@@ -170,6 +200,29 @@
 
     <br><br>
 
+    <section class="about section">
+      <div class="container">
+          <div class="row">
+              <div class="col-md-7 col-sm-12">
+                  <div class="block">
+                      <div class="section-title">
+                          <h2>Fight Covid-19 Together</h2>
+                          <p>random text</p>
+                      </div>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id </p>
+                  </div>
+              </div><!-- .col-md-7 close -->
+              <div class="col-md-5 col-sm-12">
+                  <div class="block">
+                      <img src="img/lawwa-img/sop-poster-01.jpg" alt="Img">
+                  </div>
+              </div><!-- .col-md-5 close -->
+          </div>
+      </div>
+  </section>
+
+  <br><br>
+
  <!-- Footer Section Begin -->
  <footer class="footer-section">
   <br><br><br>
@@ -246,6 +299,7 @@
     <script src="js/masonry.pkgd.min.js"></script>
     <script src="js/jquery.slicknav.js"></script>
     <script src="js/owl.carousel.min.js"></script>
+    <script src="js/lawwa.js"></script>
     <script src="js/main.js"></script>
 </body>
 
