--- a/lawwa-web-revised/index.html
+++ b/lawwa-web-revised/index.html
@@ -41,7 +41,7 @@
     <header class="header-section">
       <div class="container-fluid">
         <div class="row">
-            <div class="col-3">
+            <div class="col-5 col-lg-4 col-sm-4 col-xl-3 col-md-4">
               <div class="logo">
                 <a href="./index.html">
                   <!-- <img src="img/lawwa-img/lawwa asia logo.png" alt="" width="60px" height="50px"/> -->
@@ -49,165 +49,193 @@
                 </a>
               </div>
             </div>
-            <div class="col-1">
+            <!-- <div class="col-2">
                 <a href="https://booking.lawwa.online/lawwa/sign-up.php" target="_blank">
                   <button class="cust-lawwa-ad-btn">
                     <span>Register</span>
                   </button>
                 </a>
-            </div>
-            <div class="col-8 col-lg-8">
+            </div> -->
+            <div class="col-7 col-lg-8 col-md-7 col-xl-7 col-sm-8">
             <nav class="nav-menu mobile-menu">
               <ul>
                 <li class="active"><a href="./index.html">Home</a></li>
-                <li><a href="./services.html">Services</a></li>
+                <li><a href="./services.html">Products & Services</a></li>
                 <li><a href="./membership.html">Membership</a></li>
-                <li><a href="./academy.html">Academy</a></li>
-                <li><a lang="en" href="./recruitment.html">Recruitment</a><a lang="bm" href="./recruitment.html">rekruit</a></li>
-                <li><a href="./gallery.html">Gallery</a></li>
-                <li><a href="./events.html">News</a></li>
-                <li><a href="./profile.html">Profile</a></li>
-                <li><a href="./contact.html">Contact Us</a></li>
-                <li>
+                <li><a lang="en" href="./academy.html">Academy</a><a lang="bm" href="./academy.html">Akademy</a>
+                    <ul class="dropdown">
+                        <li><a lang="en" href="./academy.html">Academy</a><a lang="bm" href="./academy.html">Akademy</a></li>
+                        <li><a lang="en" href="./recruitment.html">Recruitment</a><a lang="bm" href="./recruitment.html">rekruit</a></li>
+                        <li><a href="./courses.html">Courses</a></li>
+                    </ul>
                 </li>
+                <li><a href="./profile.html">Profile</a>
+                    <ul class="dropdown">
+                        <li><a href="./profile.html">Profile</a></li>
+                        <li><a href="./contact.html">Contact Us</a></li>
+                    </ul>
+                </li>
+                <li><a href="./gallery.html">Media</a>
+                    <ul class="dropdown">
+                        <li><a href="./gallery.html">Gallery</a></li>
+                        <li><a href="./events.html">Newsletter</a></li>
+                        <li><a href="./blog-details.html">Tips</a></li>
+                    </ul>
+                </li>
+                <!-- <li></li> -->
               </ul>
             </nav>
             <div id="mobile-menu-wrap">
             </div>
-            <div style="float: right; border-style:dotted; border-radius: 5px; margin-top: 25px;">
+            <div style="float: right; margin-top: 25px; max-height: 25px; max-width: 25px;">
               <small>
-                <b id="switch-lang">Toggle Language</b>
+                <img id="switch-lang" src="img/lawwa-img/lang-icon.jpg">
               </small>
             </div>
           </div>
+          <div class="register-div col-xl-2 col-lg-2 col-md-2 d-none d-xs-none d-sm-none d-md-none d-lg-inline ">
+            <a href="https://booking.lawwa.online/lawwa/sign-up.php" target="_blank">
+              <button class="cust-lawwa-ad-btn btn-block">
+                <span>Register</span>
+              </button>
+            </a>
+        </div>
         </div>
       </div>
     </header>
     <!-- Header End -->
 
-    <!-- Hero Section Begin -->
-    <section class="hero-section">
-      <div class="hs-slider owl-carousel">
-        <!-- <div class="hs-item-one set-bg" data-setbg="img/lawwa-img/lawwa_new_banner.jpg"> -->
-          <div class="hs-item-one set-bg" >
-            <img src="img/lawwa-img/banner_alt1.jpeg" height="100%">
-            
-          <div class="container">
-            <div class="row">
-              <div class="col-lg-12">
-              </div>
-            </div>
-            <div class="row" style="position: absolute; bottom: 0;">
-              <div class="custom-social">
-                <a href="#">
-                  <div class="" style="max-width: 40px; max-height: 40px;">
-                    <img src="img/lawwa-img/Logo/facebook logo.png" />
-                  </div>
-                </a>
-                <a href="#">
-                  <div class="" style="max-width: 40px; max-height: 40px;">
-                    <img src="img/lawwa-img/Logo/instagram logo.png" />
-                  </div>
-                </a>
-                <a href="#">
-                  <div class="" style="max-width: 40px; max-height: 40px;">
-                    <img src="img/lawwa-img/Logo/twitter logo.png" />
-                  </div>
-                </a>
-                <a href="#">
-                  <div class="" style="max-width: 40px; max-height: 40px;">
-                    <img src="img/lawwa-img/Logo/mail logo.png" />
-                  </div>
-                </a>
-              </div>
-            </div>
-            <br>
-          </div>
-        </div>
-        <!-- <div class="hs-item set-bg" data-setbg="img/lawwa-img/banner_alt2.jpeg"> -->
-          <div class="hs-item set-bg">
-            <img src="img/lawwa-img/banner_alt2.jpeg" height="100%">
-          <div class="container">
-            <div class="row">
-              <div class="col-lg-12">
-                <div class="hs-text">
-                  <h2></h2>
-                  <p lang="en">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                    do eiusmod tempor incididunt ut labore et<br />
-                    dolore magna aliqua. Quis ipsum suspendisse ultrices gravida
-                    accumsan lacus vel facilisis.</p>
-                  <p lang="bm">Bahasa malay alternative</p>
-                  <a lang="en"
-                    href="https://booking.lawwa.online/lawwa/sign-up.php"
-                    class="primary-btn"
-                    style="
-                      background-image: linear-gradient(
-                        60deg,
-                        rgba(217, 55, 104, 1),
-                        rgba(42, 56, 143, 1)
-                      );
-                    "
-                    >Join Today!</a
-                  >
-                  <a lang="bm"
-                  href="https://booking.lawwa.online/lawwa/sign-up.php"
-                  class="primary-btn"
-                  style="
-                    background-image: linear-gradient(
-                      60deg,
-                      rgba(217, 55, 104, 1),
-                      rgba(42, 56, 143, 1)
-                    );
-                  "
-                  >language alt</a
-                >
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"> 1 </li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active" style="max-height: 550px">
+            <img class="d-block w-100" src="img/lawwa-img/lawwa_new_banner.jpg" alt="First slide" style="max-height: 550px">
+            <div class="row" style="position: absolute; bottom: 0; margin-bottom: 10px;">
+                <div class="col-5 col-xl-12 col-lg-12 col-md-6 col-sm-6">
+                    <div class="custom-social">
+                        <a href="#">
+                          <div class="" style="max-width: 25px; max-height: 25px;">
+                            <img src="img/lawwa-img/Logo/facebook logo.png" />
+                          </div>
+                        </a>
+                        <a href="#">
+                          <div class="" style="max-width: 25px; max-height: 25px;">
+                            <img src="img/lawwa-img/Logo/instagram logo.png" />
+                          </div>
+                        </a>
+                        <a href="#">
+                          <div class="" style="max-width: 25px; max-height: 25px;">
+                            <img src="img/lawwa-img/Logo/twitter logo.png" />
+                          </div>
+                        </a>
+                        <a href="#">
+                          <div class="" style="max-width: 25px; max-height: 25px;">
+                            <img src="img/lawwa-img/Logo/mail logo.png" />
+                          </div>
+                        </a>
+                      </div>
                 </div>
+                <!-- <div class="col-6 col-lg-6 col-md-6" style="float: right;">
+                    <div class="custom-social">
+                        <h3>REGISTER BANNERESQUE BUTTON</h3>
+                      </div>
+                </div> -->
               </div>
-            </div>
-            <div class="row" style="position: absolute; bottom: 0;">
-              <div class="custom-social">
-                <a href="#">
-                  <div class="" style="max-width: 40px; max-height: 40px;">
-                    <img src="img/lawwa-img/Logo/facebook logo.png" />
-                  </div>
-                </a>
-                <a href="#">
-                  <div class="" style="max-width: 40px; max-height: 40px;">
-                    <img src="img/lawwa-img/Logo/instagram logo.png" />
-                  </div>
-                </a>
-                <a href="#">
-                  <div class="" style="max-width: 40px; max-height: 40px;">
-                    <img src="img/lawwa-img/Logo/twitter logo.png" />
-                  </div>
-                </a>
-                <a href="#">
-                  <div class="" style="max-width: 40px; max-height: 40px;">
-                    <img src="img/lawwa-img/Logo/mail logo.png" />
-                  </div>
-                </a>
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/lawwa-img/banner_alt2.jpeg" alt="Second slide" style="max-height: 550px">
+            <div class="row" style="position: absolute; bottom: 0; margin-bottom: 10px;">
+                <div class="col-5 col-xl-12 col-lg-12 col-md-6 col-sm-6">
+                    <div class="custom-social">
+                        <a href="#">
+                          <div class="" style="max-width: 25px; max-height: 25px;">
+                            <img src="img/lawwa-img/Logo/facebook logo.png" />
+                          </div>
+                        </a>
+                        <a href="#">
+                          <div class="" style="max-width: 25px; max-height: 25px;">
+                            <img src="img/lawwa-img/Logo/instagram logo.png" />
+                          </div>
+                        </a>
+                        <a href="#">
+                          <div class="" style="max-width: 25px; max-height: 25px;">
+                            <img src="img/lawwa-img/Logo/twitter logo.png" />
+                          </div>
+                        </a>
+                        <a href="#">
+                          <div class="" style="max-width: 25px; max-height: 25px;">
+                            <img src="img/lawwa-img/Logo/mail logo.png" />
+                          </div>
+                        </a>
+                      </div>
+                </div>
+                <!-- <div class="col-6 col-lg-6 col-md-6" style="float: right;">
+                    <div class="custom-social">
+                        <h3>REGISTER BANNERESQUE BUTTON</h3>
+                      </div>
+                </div> -->
               </div>
-            </div>
-            <br />
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/lawwa-img/LATH3.JPG" alt="Third slide" style="max-height: 550px">
+            <div class="row w-100" style="position: absolute; bottom: 0; margin-bottom: 10px;">
+                <div class="col-12 col-xl-12 col-lg-12 col-md-6 col-sm-6" style="text-align: right;">
+                    <div class="custom-social">
+                        <a href="#">
+                          <div class="" style="max-width: 25px; max-height: 25px;">
+                            <img src="img/lawwa-img/Logo/facebook logo.png" />
+                          </div>
+                        </a>
+                        <a href="#">
+                          <div class="" style="max-width: 25px; max-height: 25px;">
+                            <img src="img/lawwa-img/Logo/instagram logo.png" />
+                          </div>
+                        </a>
+                        <a href="#">
+                          <div class="" style="max-width: 25px; max-height: 25px;">
+                            <img src="img/lawwa-img/Logo/twitter logo.png" />
+                          </div>
+                        </a>
+                        <a href="#">
+                          <div class="" style="max-width: 25px; max-height: 25px;">
+                            <img src="img/lawwa-img/Logo/mail logo.png" />
+                          </div>
+                        </a>
+                      </div>
+                </div>
+                <!-- <div class="col-6 col-lg-6 col-md-6" style="float: right;">
+                    <div class="custom-social">
+                        <h3>REGISTER BANNERESQUE BUTTON</h3>
+                      </div>
+                </div> -->
               </div>
-            </div>
           </div>
         </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
       </div>
-    </section>
-    <br />
-    <br />
 
+      <br>
     <!-- Hero Section End -->
 
     <!-- Categories Section Begin -->
     <section class="categories-section">
-      <div class="container mt-10">
+      <div class="container ">
         <div class="row">
-          <div class="col-lg-6 col-md-6">
+          <div class="col-lg-6 col-md-6 col-sm-6">
             <div class="section-title">
-              <h2 lang="en">Our Services</h2>
-              <h2 lang="bm">Services alt</h2>
+              <h2 class="gradient-text" lang="en">Our Services</h2>
+              <h2 class="gradient-text" lang="bm">Services alt</h2>
               <p lang="en">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                 do<br />
@@ -298,17 +326,13 @@
         <div class="row">
           <div class="col-lg-12 col-md-12 text-center">
             <div class="section-title">
-              <h2>Our Membership Program</h2>
+              <h2 class="gradient-text">Our Membership Program</h2>
               <p>
                 Becoming A Member Of The Lawwa.Asia Program Rewards You With
                 Exclusive Treats You Cant Get Anywhere Else!
               </p>
               <p>
-                <a
-                  href="https://booking.lawwa.online/lawwa/sign-up.php"
-                  class="cust-lawwa-gradient"
-                  >SIGN UP NOW!</a
-                >
+                <a href="https://booking.lawwa.online/lawwa/sign-up.php" class="cust-lawwa-gradient">SIGN UP NOW!</a>
               </p>
             </div>
           </div>
@@ -316,22 +340,8 @@
         <div class="row">
           <div class="col-lg-4 col-md-6 col-sm-6">
             <div class="services-item">
-              <img src="img/lawwa-img/confinement.jpg" alt="" />
-              <a href="./services.html"><h3>Services</h3></a>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt magna aliqua. Quis ipsum suspendisse
-                ultrices gravida.
-              </p>
-              <a href="./services.html" class="cust-lawwa-gradient"
-                >Explore Services</a
-              >
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 col-sm-6">
-            <div class="services-item">
               <img src="img/lawwa-img/product2.jpg" alt="" />
-              <h3 style="color: rgba(217,55,104,1);">Products</h3>
+              <h3 style="color: rgba(42,56,143,1);">Products</h3>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                 eiusmod tempor incididunt magna aliqua. Quis ipsum suspendisse
@@ -342,18 +352,28 @@
           </div>
           <div class="col-lg-4 col-md-6 col-sm-6">
             <div class="services-item">
-              <img src="img/lawwa-img/massage.jpg" alt="" />
-              <h3 style="color: rgba(42,56,143,1);">Membership Kit</h3>
+              <img src="img/lawwa-img/confinement.jpg" alt="" />
+              <a href="./services.html">
+                <h3 style="color: rgba(42,56,143,1);">Services</h3>
+              </a>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                 eiusmod tempor incididunt magna aliqua. Quis ipsum suspendisse
                 ultrices gravida.
               </p>
-              <a
-                href="https://booking.lawwa.online/lawwa/sign-up.php" target="_blank"
-                class="cust-lawwa-gradient"
-                >JOIN NOW</a
-              >
+              <a href="./services.html" class="cust-lawwa-gradient">Explore Services</a>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-sm-6">
+            <div class="services-item">
+              <img src="img/lawwa-img/massage.jpg" alt="" />
+              <h3 class="lawwa-blue" style="color: rgba(42,56,143,1);">Your PBT</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt magna aliqua. Quis ipsum suspendisse
+                ultrices gravida.
+              </p>
+              <a href="https://booking.lawwa.online/lawwa/sign-up.php" target="_blank" class="cust-lawwa-gradient">JOIN NOW</a>
             </div>
           </div>
         </div>
