--- a/lawwa-web-revised/productdemo.html
+++ b/lawwa-web-revised/productdemo.html
@@ -41,36 +41,65 @@
     <header class="header-section">
       <div class="container-fluid">
         <div class="row">
-            <div class="col-4">
+            <div class="col-5 col-lg-4 col-sm-4 col-xl-3 col-md-4">
               <div class="logo">
                 <a href="./index.html">
-                  <img src="img/lawwa-img/lawwa asia logo.png" alt="" width="60px" height="50px"/>
+                  <!-- <img src="img/lawwa-img/lawwa asia logo.png" alt="" width="60px" height="50px"/> -->
+                  <img src="img/lawwa-img/Logo/LawwaLandscape.JPG" alt="" width="100%" height="50px"/>
                 </a>
               </div>
             </div>
-            <div class="col-8 col-lg-8">
+            <!-- <div class="col-2">
+                <a href="https://booking.lawwa.online/lawwa/sign-up.php" target="_blank">
+                  <button class="cust-lawwa-ad-btn">
+                    <span>Register</span>
+                  </button>
+                </a>
+            </div> -->
+            <div class="col-7 col-lg-8 col-md-7 col-xl-7 col-sm-8">
             <nav class="nav-menu mobile-menu">
               <ul>
                 <li><a href="./index.html">Home</a></li>
-                <li class="active"><a href="./services.html">Services</a></li>
-                <li><a href="./membership.html">Membership Program</a></li>
-                <li><a href="./academy.html">PBT Academy</a></li>
-                <li>
-                  <a href="#">Portfolio</a>
-                  <ul class="dropdown">
-                    <li><a href="./profile.html">Profile</a></li>
-                    <li><a href="./gallery.html">Gallery</a></li>
-                    <li><a href="./events.html">Events & News</a></li>
-                    <li><a href="./contact.html">Contact Us</a></li>
-                  </ul>
+                <li class="active"><a href="./services.html">Products & Services</a></li>
+                <li><a href="./membership.html">Membership</a></li>
+                <li><a lang="en" href="./academy.html">Academy</a><a lang="bm" href="./academy.html">Akademy</a>
+                    <ul class="dropdown">
+                        <li><a lang="en" href="./academy.html">Academy</a><a lang="bm" href="./academy.html">Akademy</a></li>
+                        <li><a lang="en" href="./recruitment.html">Recruitment</a><a lang="bm" href="./recruitment.html">rekruit</a></li>
+                        <li><a href="./courses.html">Courses</a></li>
+                    </ul>
                 </li>
+                <li><a href="./profile.html">Profile</a>
+                    <ul class="dropdown">
+                        <li><a href="./profile.html">Profile</a></li>
+                        <li><a href="./contact.html">Contact Us</a></li>
+                    </ul>
+                </li>
+                <li><a href="./gallery.html">Media</a>
+                    <ul class="dropdown">
+                        <li><a href="./gallery.html">Gallery</a></li>
+                        <li><a href="./events.html">Newsletter</a></li>
+                        <li><a href="./blog-details.html">Tips</a></li>
+                    </ul>
+                </li>
+                <!-- <li></li> -->
               </ul>
             </nav>
-            <div class="top-search search-switch">
-              <i class="fa fa-search"></i>
+            <div id="mobile-menu-wrap">
             </div>
-            <div id="mobile-menu-wrap"></div>
+            <div style="float: right; margin-top: 25px; max-height: 25px; max-width: 25px;">
+              <small>
+                <img id="switch-lang" src="img/lawwa-img/lang-icon.jpg">
+              </small>
+            </div>
           </div>
+          <div class="register-div col-xl-2 col-lg-2 col-md-2 d-none d-xs-none d-sm-none d-md-none d-lg-inline ">
+            <a href="https://booking.lawwa.online/lawwa/sign-up.php" target="_blank">
+              <button class="cust-lawwa-ad-btn btn-block">
+                <span>Register</span>
+              </button>
+            </a>
+        </div>
         </div>
       </div>
     </header>
@@ -82,7 +111,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h2>Product Title</h2>
+                        <h3 style="color: rgba(42,56,143,1);">Product Title</h3>
                     </div>
                     <div class="col-lg-4 col-4 col-sm-4">
                         <!-- <div class="pdp-item set-bg" data-setbg="img/portfolio/details/details-pic/dp-1.jpg"></div>
@@ -123,7 +152,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="section-title">
-                        <h2>Other Products</h2>
+                        <h3>Other Products</h3>
                     </div>
                 </div>
             </div>
@@ -132,8 +161,8 @@
                     <div class="rp-item">
                         <img src="img/lawwa-img/product1.jpg" alt="">
                         <div class="rp-text">
-                            <h5>SPRING GARDEN</h5>
-                            <span>Lifestyle</span>
+                            <h5>Product name</h5>
+                            <span>Related Service</span>
                         </div>
                     </div>
                 </div>
@@ -141,8 +170,8 @@
                     <div class="rp-item">
                         <img src="img/lawwa-img/product2.jpg" alt="" height="100%">
                         <div class="rp-text">
-                            <h5>SPRING GARDEN</h5>
-                            <span>Fashion</span>
+                          <h5>Product name</h5>
+                          <span>Related Service</span>
                         </div>
                     </div>
                 </div>
@@ -150,8 +179,8 @@
                     <div class="rp-item">
                         <img src="img/lawwa-img/product1.jpg" alt="">
                         <div class="rp-text">
-                            <h5>SPRING GARDEN</h5>
-                            <span>Natural</span>
+                          <h5>Product name</h5>
+                          <span>Related Service</span>
                         </div>
                     </div>
                 </div>
@@ -159,8 +188,8 @@
                     <div class="rp-item">
                         <img src="img/lawwa-img/product2.jpg" alt="" height="100%">
                         <div class="rp-text">
-                            <h5>SPRING GARDEN</h5>
-                            <span>Animal</span>
+                          <h5>Product name</h5>
+                          <span>Related Service</span>
                         </div>
                     </div>
                 </div>
@@ -245,6 +274,7 @@
     <script src="js/masonry.pkgd.min.js"></script>
     <script src="js/jquery.slicknav.js"></script>
     <script src="js/owl.carousel.min.js"></script>
+    <script src="js/lawwa.js"></script>
     <script src="js/main.js"></script>
 </body>
 
