--- a/lawwa-web-revised/services.html
+++ b/lawwa-web-revised/services.html
@@ -41,49 +41,97 @@
     <header class="header-section">
       <div class="container-fluid">
         <div class="row">
-            <div class="col-2">
+            <div class="col-5 col-lg-4 col-sm-4 col-xl-3 col-md-4">
               <div class="logo">
                 <a href="./index.html">
                   <!-- <img src="img/lawwa-img/lawwa asia logo.png" alt="" width="60px" height="50px"/> -->
-                  <img src="img/lawwa-img/Logo/lawwa landscape.png" alt=""/>
+                  <img src="img/lawwa-img/Logo/LawwaLandscape.JPG" alt="" width="100%" height="50px"/>
                 </a>
               </div>
             </div>
-            <div class="col-2">
-                <a href="./index.html">
-                  <img src="img/lawwa-img/register.jpg" alt="" width="30px" height="30px"/>                
+            <!-- <div class="col-2">
+                <a href="https://booking.lawwa.online/lawwa/sign-up.php" target="_blank">
+                  <button class="cust-lawwa-ad-btn">
+                    <span>Register</span>
+                  </button>
                 </a>
-            </div>
-            <div class="col-8 col-lg-8">
+            </div> -->
+            <div class="col-7 col-lg-8 col-md-7 col-xl-7 col-sm-8">
             <nav class="nav-menu mobile-menu">
               <ul>
                 <li><a href="./index.html">Home</a></li>
-                <li class="active"><a href="./services.html">Services</a></li>
+                <li class="active"><a href="./services.html">Products & Services</a></li>
                 <li><a href="./membership.html">Membership</a></li>
-                <li><a href="./academy.html">Academy</a></li>
-                <li><a href="./recruitment.html">Recruitment</a></li>
-                <li><a href="./gallery.html">Gallery</a></li>
-                <li><a href="./events.html">News</a></li>
-                <li><a href="./profile.html">Profile</a></li>
-                <li><a href="./contact.html">Contact Us</a></li>
+                <li><a lang="en" href="./academy.html">Academy</a><a lang="bm" href="./academy.html">Akademy</a>
+                    <ul class="dropdown">
+                        <li><a lang="en" href="./academy.html">Academy</a><a lang="bm" href="./academy.html">Akademy</a></li>
+                        <li>
+                          <a lang="en" href="./recruitment.html">Recruitment</a>
+                          <a lang="bm" href="./recruitment.html">Rekruitment</a>
+                        </li>
+                        <li><a href="./courses.html">Courses</a></li>
+                    </ul>
+                </li>
+                <li><a href="./profile.html">Profile</a>
+                    <ul class="dropdown">
+                        <li><a href="./profile.html">Profile</a></li>
+                        <li><a href="./contact.html">Contact Us</a></li>
+                    </ul>
+                </li>
+                <li><a href="./gallery.html">Media</a>
+                    <ul class="dropdown">
+                        <li><a href="./gallery.html">Gallery</a></li>
+                        <li><a href="./events.html">Newsletter</a></li>
+                        <li><a href="./blog-details.html">Tips</a></li>
+                    </ul>
+                </li>
+                <!-- <li></li> -->
               </ul>
             </nav>
-            <div id="mobile-menu-wrap"></div>
+            <div id="mobile-menu-wrap">
+            </div>
+            <div style="float: right; margin-top: 25px; max-height: 25px; max-width: 25px;">
+              <small>
+                <img id="switch-lang" src="img/lawwa-img/lang-icon.jpg">
+              </small>
+            </div>
           </div>
+          <div class="register-div col-xl-2 col-lg-2 col-md-2 d-none d-xs-none d-sm-none d-md-none d-lg-inline ">
+            <a href="https://booking.lawwa.online/lawwa/sign-up.php" target="_blank">
+              <button class="cust-lawwa-ad-btn btn-block">
+                <span>Register</span>
+              </button>
+            </a>
+        </div>
         </div>
       </div>
     </header>
     <!-- Header End -->
 
-      <br>
+      <!-- <br>
       <section>
         <div class="container">
-          <div class="col-lg-12 p-0">
-            <img class="cust-banner-pic" src="img/lawwa-img/DSC08056-v2.jpg">
+          <div class="p-0">
+            <img class="cust-banner-pic w-100 d-block" src="img/lawwa-img/DSC08056-v2.jpg">
           </div>
         </div>
       </section>
-      <br>
+      <br> -->
+
+      <div class="hero-wrap" style="background-image: url('img/lawwa-img/DSC08056-v2.jpg">
+        <div class="overlay"></div>
+        <div class="container">
+          <div class="row no-gutters align-items-center"  data-scrollax-parent="true">
+            <!-- <div class="col-md-7 ftco-animate">
+              <span class="subheading">Welcome</span>
+              <h1 class="mb-4">To Your Personal Bueaty Solution</h1>
+              <p class="caps">More text?</p>
+              <p class="mb-0"><a href="https://booking.lawwa.online/lawwa/sign-up.php" class="btn btn-primary">Join Today</a> <a href="#" class="btn btn-white">View Our Products And Services</a></p>
+          </div> -->
+          </div>
+        </div>
+      </div>
+
 
     <!-- Blog Section Begin -->
     <br>
@@ -92,7 +140,7 @@
             <div class="row">
                 <div class="col-lg-12">
                   <div class="section-title pricing-title" style="margin-bottom: 15px !important; padding-bottom: 20px !important;">
-                    <h3>Services & Related Products</h3>
+                    <h3 class="gradient-text">Services & Related Products</h3>
                         <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do<br /> eiusmod tempor
                             incididunt ut labore et dolore.</span>
                     </div>
@@ -151,7 +199,7 @@
                   <img src="img/lawwa-img/treatment-alt.jpg" alt="">
                 </div>
                 <div class="bi-text">
-                    <h5><a href="./facial.html">Treatment</a>
+                    <h5 style="color: rgba(42,56,143,1) !important;"><a href="./facial.html">Treatment</a>
                     </h5>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                         ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo
@@ -174,7 +222,7 @@
                 <div class="col-lg-3">
                     <div class="blog-sidebar">
                         <div class="bs-item s-mb">
-                            <h5>Products</h5>
+                            <h5 class="lawwa-blue-text">Products</h5>
                             <div class="bi-feature-post">
                                 <a href="productdemo.html" class="fp-item">
                                   <div class="fp-pic col-6">
@@ -328,6 +376,7 @@
     <script src="js/masonry.pkgd.min.js"></script>
     <script src="js/jquery.slicknav.js"></script>
     <script src="js/owl.carousel.min.js"></script>
+    <script src="js/lawwa.js"></script>
     <script src="js/main.js"></script>
 </body>
 
